--- a/src/notes/typescript/02.md
+++ b/src/notes/typescript/02.md
@@ -144,3 +144,64 @@ type Callback = () => void;
 ```
 
 :::
+
+:::snippet 函数类型
+
+1. 函数类型定义
+
+```typescript
+function add(x: number, y: number): number {
+  return x + y;
+}
+let myAdd = function(x: number, y: number): number {
+  return x + y;
+};
+```
+
+2. 函数可选参数
+
+```typescript
+function buildName(firstName: string, lastName?: string) {
+  if (lastName) {
+    return firstName + " " + lastName;
+  }
+  return firstName;
+}
+```
+
+3. 函数默认值
+
+```typescript
+function buildName(firstName: string, lastName = "Smith") {
+  // ...
+}
+```
+
+4. 剩余参数
+
+```typescript
+function buildName(firstName: string, ...restOfName: string[]) {
+  return firstName + " " + restOfName.join(" ");
+}
+```
+
+5. 泛型函数
+
+```typescript
+function identity<T>(arg: T): T {
+  return arg;
+}
+// 类型执行
+let output = identity<string>("myString");
+// 类型自动推断
+let output = identity("myString");
+```
+
+```typescript
+function loggingIdentity<T>(arg: Array<T>): Array<T> {
+  console.log(arg.length);
+  return arg;
+}
+```
+
+:::
