--- a/src/notes/typescript/03.md
+++ b/src/notes/typescript/03.md
@@ -230,3 +230,40 @@ abstract class Department {
 > 只能被集成不能被实例化
 
 :::
+
+:::snippet 泛型
+
+1. 泛型类
+
+```typescript
+class GenericNumber<T> {
+  zeroValue: T;
+  add: (x: T, y: T) => T;
+}
+let myGenericNumber = new GenericNumber<number>();
+myGenericNumber.zeroValue = 0;
+myGenericNumber.add = function(x, y) {
+  return x + y;
+};
+```
+
+2. 泛型约束
+
+```typescript
+interface Lengthwise {
+  length: number;
+}
+function loggingIdentity<T extends Lengthwise>(arg: T): T {
+  return arg;
+}
+```
+
+3. 泛型构造函数
+
+```typescript
+function create<T>(c: { new (): T }): T {
+  return new c();
+}
+```
+
+:::
