--- a/src/notes/javascript/02.md
+++ b/src/notes/javascript/02.md
@@ -1,11 +1,11 @@
 :::snippet 基础语法
 
-1. 区分大小写
-2. 标识符：所谓标识符，就是指变量、函数、属性的名字，或者函数的参数
-   - 第一个字符必须是一个字母、下划线（`_`）或一个美元符号（`$`）
-   - 其他字符可以是字母、下划线、美元符号或数字
-   - 采用驼峰大小写格式，也就是第一个字母小写，剩下的每个单词的首字母大写
-3. 注释
+1. 区分大小写。
+2. 标识符：所谓标识符，就是指变量、函数、属性的名字，或者函数的参数。
+   - 第一个字符必须是一个字母、下划线（`_`）或一个美元符号（`$`）。
+   - 其他字符可以是字母、下划线、美元符号或数字。
+   - 采用驼峰大小写格式，也就是第一个字母小写，剩下的每个单词的首字母大写。
+3. 代码注释。
 
 ```javascript
 // 单行注释
@@ -18,13 +18,13 @@
  */
 ```
 
-4. 严格模式： ECMAScript5 引入了严格模式（strict mode）的概念，用于高速 JavaScript 引擎切换到严格模式，严格模式下，JavaScript 的执行结果会有很大不同
+4. 严格模式：ECMAScript5 引入了严格模式（ `strict mode` ）的概念，用于高速 JavaScript 引擎切换到严格模式，严格模式下，JavaScript 的执行结果会有很大不同。
 
 ```javascript
 "use strict";
 ```
 
-5. 语句：ECMAScript 中的语句以一个分号结尾`;`如果省略分号，则由解析器确定语句的结尾，建议语句结尾都加上分号防止压缩文件等各种不确定的情况会会报错
+5. 语句：ECMAScript 中的语句以一个分号结尾 `;` 如果省略分号，则由解析器确定语句的结尾，建议语句结尾都加上分号防止压缩文件等各种不确定的情况会会报错。
 
 ```javascript
 var sum = a + b; // 即使没有分号也是有效的语句——不推荐
@@ -35,28 +35,28 @@ var diff = a - b; // 有效的语句——推荐
 
 :::snippet 变量
 
-ECMAScript 的变量是松散类型的，所谓松散类型就是可以用来保存任何类型的数据
+ECMAScript 的变量是松散类型的，所谓松散类型就是可以用来保存任何类型的数据。
 
-1. 定义变量
+1. 定义变量。
 
 ```JavaScript
 var message; //undefined
 ```
 
-2. 定义变量初始化赋值
+2. 定义变量初始化赋值。
 
 ```JavaScript
 var message = "hi";
 ```
 
-3. 定义变量初始化赋值，更改变量的值
+3. 定义变量初始化赋值，更改变量的值。
 
 ```JavaScript
 var message = "hi";
 message = 100; // 有效，但不推荐
 ```
 
-4. 局部变量
+4. 局部变量。
 
 ```JavaScript
 function test(){
@@ -66,7 +66,7 @@ test();
 alert(message); // 错误！
 ```
 
-5. 默认全局变量
+5. 默认全局变量。
 
 ```JavaScript
 function test(){
@@ -76,7 +76,7 @@ test();
 alert(message); // "hi"
 ```
 
-6. 一次定义多个变量
+6. 一次定义多个变量。
 
 ```JavaScript
 var message = "hi",found = false,age = 29;
@@ -86,37 +86,41 @@ var message = "hi",found = false,age = 29;
 
 :::snippet 数据类型
 
-1. 5 种简单数据类型（也称为基本数据类型）：`Undefined`、`Null`、`Boolean`、`Number`和`String`
-2. 数据类型都可以通过关键字`typeof`操作符，获取字段的类型
-   - `undefined`未定义
-   - `boolean`布尔值
-   - `string`字符串
-   - `number`数值
-   - `object`对象或`null`
-   - `function`函数
-3. `typeof`获取对应的数据类型
+1. 5 种简单数据类型（也称为基本数据类型）：`Undefined`、`Null`、`Boolean`、`Number`和`String`。
+2. 数据类型都可以通过关键字`typeof`操作符，获取字段的类型。
+
+| 类型      | 描述          |
+| :-------- | :------------ |
+| undefined | 未定义        |
+| boolean   | 布尔值        |
+| string    | 字符串        |
+| number    | 数值          |
+| object    | 对象或者 null |
+| function  | 函数          |
+
+3. `typeof`获取对应的数据类型。
 
 ```javascript
 alert(typeof message); // "string"
 alert(typeof 95); // "number"
 ```
 
-4. 复杂的数据类型：`Object`，`Object` 本质上是由一组无序的键值对组成的
+4. 复杂的数据类型：`Object`，`Object` 本质上是由一组无序的键值对组成的。
 
-5. 由于`ECMAScript`数据类型具有动态性，因此的确没有再定义其他数据类型的必要了
+5. 由于`ECMAScript`数据类型具有动态性，因此的确没有再定义其他数据类型的必要了。
 
 :::
 
 :::snippet Undefined 类型
 
-1. 引入这个值是为了正式区分空对象指针与未经初始化的变量
+1. 引入这个值是为了正式区分空对象指针与未经初始化的变量。
 
 ```JavaScript
 var message;
 alert(message == undefined); //true
 ```
 
-2. 变量未声明调用会报错
+2. 变量未声明调用会报错。
 
 ```JavaScript
 var message; // 这个变量声明之后默认取得了undefined 值
@@ -125,7 +129,7 @@ alert(message); // "undefined"
 alert(age); // 产生错误
 ```
 
-3. 变量未声明使用 typeof 来判断类型也不会报错返回 undefined
+3. 变量未声明使用 `typeof` 来判断类型也不会报错返回 `undefined` 。
 
 ```JavaScript
 var message; // 这个变量声明之后默认取得了undefined 值
@@ -139,16 +143,15 @@ alert(typeof age); // "undefined"
 
 :::snippet Null 类型
 
-1. `Null` 类型的值只有`null`，`typeof` 检测返回 `object` 类型
-2. `undefined` 值是派生自 `null` 值的，因此 ECMA 规定对它们的相等性测试要返回 `true`
+1. `Null` 类型的值只有`null`，`typeof` 检测返回 `object` 类型。
+2. `undefined` 值是派生自 `null` 值的，因此 ECMA 规定对它们的相等性测试要返回 `true` 。
 
 ```JavaScript
 alert(null == undefined); //true
 alert(null === undefined); //false
 ```
 
-3. 推荐声明对象为 `null` 尽量赋值 `null`，这样做不仅可以体现 `null` 作为空对象指针的惯例，
-   而且也有助于进一步区分 `null` 和 `undefined`。
+3. 推荐声明对象为 `null` 尽量赋值 `null`，这样做不仅可以体现 `null` 作为空对象指针的惯例，而且也有助于进一步区分 `null` 和 `undefined`。
 
 ```JavaScript
 var params = null;
@@ -158,16 +161,16 @@ var params = null;
 
 :::snippet Boolean 类型
 
-1. `Boolean` 类型只有两个字面值：`true` 和 `false`
+1. `Boolean` 类型只有两个字面值：`true` 和 `false` 。
 
-2. 将一个值转换为其对应的 `Boolean` 值，可以调用转型函数 `Boolean()`
+2. 将一个值转换为其对应的 `Boolean` 值，可以调用转型函数 `Boolean()` 。
 
 ```JavaScript
 var message = "Hello world!";
 var messageAsBoolean = Boolean(message);
 ```
 
-3. Boolean 转换的规则
+3. Boolean 转换的规则。
 
 | 数据类型  | 转换为 true 的值             | 转为 false 的值 |
 | :-------- | :--------------------------- | :-------------- |
@@ -177,7 +180,7 @@ var messageAsBoolean = Boolean(message);
 | Object    | 任何对象                     | null            |
 | Undefined | -                            | undefined       |
 
-4. 流程语句判断会自动执行 `Boolean` 转换
+4. 流程语句判断会自动执行 `Boolean` 转换。
 
 ```JavaScript
 var message = "Hello world!";
@@ -190,8 +193,8 @@ if (message){
 
 :::snippet Number 类型
 
-1. 使用 `IEEE754` 格式来表示整数和浮点数值
-2. 数值的进制表示
+1. 使用 `IEEE754` 格式来表示整数和浮点数值。
+2. 数值的进制表示。
 
 ```JavaScript
 var octalNum1 = 070; // 八进制的56
@@ -201,7 +204,7 @@ var hexNum1 = 0xA; // 十六进制的10
 var hexNum2 = 0x1f; // 十六进制的31
 ```
 
-3. 浮点数值
+3. 浮点数值。
 
 ```JavaScript
 var floatNum1 = 1.1;
@@ -212,8 +215,7 @@ var floatNum2 = 10.0; // 整数=>解析为10
 var floatNum = 3.125e7; // e的科学计数法表示等于31250000
 ```
 
-4. 浮点数计算
-   浮点数值计算会产生舍入误差的问题，这是使用基于 IEEE754 数值的浮点计算的通病
+4. 浮点数值计算会产生舍入误差的问题，这是使用基于 IEEE754 数值的浮点计算的通病。
 
 ```JavaScript
 0.1 + 0.2 = 0.30000000000000004 //计算错误
@@ -221,12 +223,15 @@ var floatNum = 3.125e7; // e的科学计数法表示等于31250000
 0.15 + 0.15 = 0.3 //计算正确
 ```
 
-5. 数值范围
-   - 最大值：`Number.MAX_VALUE`==1.7976931348623157e+308
-   - 最小值：`Number.MIN_VALUE`==5e-324
-   - 负无穷大：小于最小值，`-Infinity`==`Number.POSITIVE_INFINITY`
-   - 正无穷大：大于最大值，`Infinity`==`Number.NEGATIVE_INFINITY`
-   - 范围判断:`isFinite()`函数用于检查其参数是否是无穷大，可计算的数值返回`true`
+5. 数值范围。
+
+| 类型     | 值                                                                 |
+| :------- | :----------------------------------------------------------------- |
+| 最大值   | `Number.MAX_VALUE`==1.7976931348623157e+308                        |
+| 最小值   | `Number.MIN_VALUE`==5e-324                                         |
+| 负无穷大 | 小于最小值，`-Infinity`==`Number.POSITIVE_INFINITY`                |
+| 正无穷大 | 大于最大值，`Infinity`==`Number.NEGATIVE_INFINITY`                 |
+| 范围判断 | `isFinite()`函数用于检查其参数是否是无穷大，可计算的数值返回`true` |
 
 ```JavaScript
 // 如果 number 是 NaN（非数字），或者是正、负无穷大的数，则返回 false
@@ -236,8 +241,7 @@ alert(isFinite(result)); //false
 
 6. NaN
 
-`NaN`即非数值（Not a Number）是一个特殊的数值，这个数值用于表示一个本来要返回数值的操作数
-未返回数值的情况（这样就不会抛出错误了）,计算`数值/0`不会报错
+`NaN` 即非数值（ Not a Number ）是一个特殊的数值，这个数值用于表示一个本来要返回数值的操作数，未返回数值的情况（不会抛出错误了）,计算 `数值/0` 不会报错。
 
 ```JavaScript
 alert(NaN == NaN); //false
@@ -249,12 +253,12 @@ alert(isNaN("blue")); //true（不能转换成数值）
 alert(isNaN(true)); //false（可以被转换成数值1）
 ```
 
-只有 `0` 除以 `0` 才会返回 `NaN`，正数除以 `0` 返回 `Infinity`，负数除以 `0` 返回`-Infinity`。
+只有 `0` 除以 `0` 才会返回 `NaN`，正数除以 `0` 返回 `Infinity`，负数除以 `0` 返回 `-Infinity` 。
 `isNaN()`也适用于对象，先调用对象 `valueOf` 不能转为数值，在调用 `toString()`方法
 
 > NaN 不等于 NaN ，也不等于任何数值
 
-7. 数值类型转换
+7. 数值类型转换。
 
 `Number()`方法
 
