--- a/src/notes/development/01.md
+++ b/src/notes/development/01.md
@@ -4,7 +4,29 @@
 
 ### 1. 表格
 
+后台系统核心展示都是以表格为主，需要表格有完善功能和扩展支持
+
+| 序号 | 功能             |
+| :--- | :--------------- |
+| 1    | 基本数据展示     |
+| 2    | 数据排序筛选     |
+| 3    | 行编辑           |
+| 4    | 单元格编辑       |
+| 5    | 表头分组、固定列 |
+| 6    | 展开折叠行       |
+| 7    | 无限滚动加载     |
+| 8    | 自定义展示列     |
+| 9    | 自定义样式       |
+| 10   | 自定义渲染       |
+| 11   | 树形表格         |
+| 12   | 数据分页         |
+| 13   | 全局默认配置     |
+
 ### 2. 表单
+
+| 序号 | 功能         |
+| :--- | :----------- |
+| 1    | 基本数据展示 |
 
 ### 3. 树
 
