--- a/src/notes/development/01.md
+++ b/src/notes/development/01.md
@@ -4,31 +4,20 @@
 
 ### 1. 表格
 
-后台系统核心展示都是以表格为主，需要表格有完善功能和扩展支持
-
-| 序号 | 功能             |
-| :--- | :--------------- |
-| 1    | 基本数据展示     |
-| 2    | 数据排序筛选     |
-| 3    | 行编辑           |
-| 4    | 单元格编辑       |
-| 5    | 表头分组、固定列 |
-| 6    | 展开折叠行       |
-| 7    | 无限滚动加载     |
-| 8    | 自定义展示列     |
-| 9    | 自定义样式       |
-| 10   | 自定义渲染       |
-| 11   | 树形表格         |
-| 12   | 数据分页         |
-| 13   | 全局默认配置     |
+- 支持基本展示，固定表头、合并单元格、单元格编辑、复选框、排序、筛选等
+- 支持高度定制化，单元格自定义渲染、行渲染、表格样式等
+- 支持大部分全局通用配置，默认是否加上分页展示、单元格统一格式化处理、操作列权限等
 
 ### 2. 表单
 
-| 序号 | 功能         |
-| :--- | :----------- |
-| 1    | 基本数据展示 |
+- 基础组件：复选框、单选框、文本框、数字框、下拉框、日期框、文件上传
+- 表单：取值、赋值、清空、重置、验证、禁用组件、启用组件、隐藏组件、显示组件
 
 ### 3. 树
+
+- 支持基本树状结构展示
+- 支持高度定制化
+- 支持功能扩展
 
 ## 聚合核心组件
 
