--- a/src/notes/javascript/10.md
+++ b/src/notes/javascript/10.md
@@ -360,11 +360,13 @@ function outputNumbers(count) {
 2. 声明变量覆盖，销毁引用重新定义取值
 
 ```javascript
-function outputNumbers(count){
-    for (var i=0; i < count; i++){
-alert(i); }
-var i; //重新声明变量
-alert(i); //计数 }
+function outputNumbers(count) {
+  for (var i = 0; i < count; i++) {
+    alert(i);
+  }
+  var i; //重新声明变量
+  alert(i); //计数
+}
 ```
 
 3. 匿名函数实现块级作用域
