--- a/src/notes/ecmascript6/01.md
+++ b/src/notes/ecmascript6/01.md
@@ -66,3 +66,94 @@ array = [1]; //报错
 > const 变量存储的是内存地址，改变引用类型内部属性不会引起地址的改变
 
 :::
+
+:::snippet 解构
+
+1. 数组解构
+
+```javascript
+let [a, b, c] = [1, 2, 3];
+let [foo, [[bar], baz]] = [1, [[2], 3]];
+let [head, ...tail] = [1, 2, 3, 4];
+```
+
+2. 数组解构默认值
+
+```javascript
+let [foo = true] = [];
+let [x, y = "b"] = ["a"];
+let [x, y = "b"] = ["a", undefined];
+```
+
+3. 对象解构
+
+```javascript
+let { foo, bar } = { foo: "aaa", bar: "bbb" };
+```
+
+4. 对象解构别名
+
+```javascript
+let { foo: baz } = { foo: "aaa", bar: "bbb" };
+```
+
+5. 对象解构默认值
+
+```javascript
+var { x, y = 5 } = { x: 1 };
+```
+
+6. 字符串解构
+
+```javascript
+const [a, b, c, d, e] = "hello";
+```
+
+7. 函数解构
+
+```javascript
+function add([x, y]) {
+  return x + y;
+}
+add([1, 2]);
+```
+
+> 解构内部用的`===`做判断，设置默认值都是值等于`undefined`才会赋值，参数或者变量都可以进行解构操作
+
+:::
+
+:::snippet 解构用途
+
+1. 交换变量
+
+```javascript
+let x = 1;
+let y = 2;
+[x, y] = [y, x];
+```
+
+2. 返回值
+
+```javascript
+function example() {
+  return [1, 2, 3];
+}
+let [a, b, c] = example();
+```
+
+3. 参数定义
+
+```javascript
+function f({x, y, z}) { ... }
+f({z: 3, y: 2, x: 1});
+```
+
+4. 变量解构
+
+```javascript
+for (let [key] of map) {
+  // ...
+}
+```
+
+:::
