ES6 字符串扩展

--- a/src/notes/ecmascript6/01.md
+++ b/src/notes/ecmascript6/01.md
@@ -157,3 +157,62 @@ for (let [key] of map) {
 ```
 
 :::
+
+:::snippet 字符串扩展
+
+1. 字符串包含判断
+
+| 方法       | 描述                                             |
+| ---------- | ------------------------------------------------ |
+| includes   | 返回布尔值，表示是否找到了参数字符串。           |
+| startsWith | 返回布尔值，表示参数字符串是否在原字符串的头部。 |
+| endsWith   | 返回布尔值，表示参数字符串是否在原字符串的尾部。 |
+
+```javascript
+let s = "Hello world!";
+s.startsWith("Hello"); // true
+s.endsWith("!"); // true
+s.includes("o"); // true
+```
+
+```javascript
+let s = "Hello world!";
+s.startsWith("world", 6); // true
+s.endsWith("Hello", 5); // true
+s.includes("Hello", 6); // false
+```
+
+> endsWith 设置第二个参数，是从 0 到 n 开始计算，其他方法都是 n 到结尾计算
+
+2. 字符串内容操作
+
+| 方法     | 描述                                |
+| -------- | ----------------------------------- |
+| repeat   | 字符串内容重复 n 次返回新的字符串。 |
+| padStart | 字符串头部补全。                    |
+| padStart | 字符串尾部补全。                    |
+
+```javascript
+"x".repeat(3); // "xxx"
+"x".padStart(5, "ab"); // 'ababx'
+"x".padEnd(5, "ab"); // 'xabab'
+```
+
+3. 模板字符串
+
+```javascript
+let place = "Tom";
+let msg = `Hello, ${place}`; //msg="Hello Tom"
+```
+
+4. Stirng.raw 模板字符串转义
+
+```javascript
+let tab = "\t"; // " "
+let tab = String.raw`\t`; //"\t"
+String.raw`Hi\\n`; // "Hi\\\\n"
+String.raw({ raw: "test" }, 0, 1, 2); // 't0e1s2t'
+String.raw({ raw: ["t", "e", "s", "t"] }, 0, 1, 2); // 't0e1s2t'
+```
+
+:::
