--- a/src/notes/ecmascript6/01.md
+++ b/src/notes/ecmascript6/01.md
@@ -210,9 +210,220 @@ let msg = `Hello, ${place}`; //msg="Hello Tom"
 ```javascript
 let tab = "\t"; // " "
 let tab = String.raw`\t`; //"\t"
-String.raw`Hi\\n`; // "Hi\\\\n"
+String.raw`Hi\\n`; // "Hi\\n"
 String.raw({ raw: "test" }, 0, 1, 2); // 't0e1s2t'
 String.raw({ raw: ["t", "e", "s", "t"] }, 0, 1, 2); // 't0e1s2t'
+```
+
+:::
+
+:::snippet 正在表达式扩展
+
+1. 增加 u 字符匹配，解决 Unicode 字符超过 \uFFFF 错误解析问题
+
+```javascript
+/^\uD83D/u.test('\uD83D\uDC2A') // false
+/^\uD83D/.test('\uD83D\uDC2A') // true
+
+var s = '𠮷';
+/^.$/.test(s) // false
+/^.$/u.test(s) // true
+
+/[a-z]/i.test('\u212A') // false
+/[a-z]/iu.test('\u212A') // true
+```
+
+2. Unicode 字符判断
+
+```javascript
+const r1 = /hello/;
+const r2 = /hello/u;
+r1.unicode; // false
+r2.unicode; // true
+```
+
+3. y 修饰符，每次从上次位置开始，到了结尾位置不在从头开始
+
+```javascript
+var s = "aaa_aa_a";
+var r1 = /a+/g;
+var r2 = /a+/y;
+
+r1.exec(s); // ["aaa"]
+r2.exec(s); // ["aaa"]
+
+r1.exec(s); // ["aa"]
+r2.exec(s); // null
+```
+
+4. 字符串匹配全部正则实现：match()、replace()、search()、split()、matchAll()
+
+:::
+
+:::snippet 数值扩展
+
+1. 方法扩展
+
+| 方法                   | 描述                                               |
+| ---------------------- | -------------------------------------------------- |
+| Number.isFinite()      | 数值是否有限，参数必须为数值类型，否则都为 false   |
+| Number.isNaN()         | 判断是否非数值，进行 Number 转换在判断。           |
+| Number.parseInt()      | 转换为 Int 类型与 parseInt 一致。                  |
+| Number.parseFloat()    | 转换为 Float 类型与 parseFloat 一致。              |
+| Number.isInteger()     | 数值是否整数，参数必须为数值类型，否则都为 false。 |
+| Number.isSafeInteger() | 判断数值范围在-2^53 到 2^53 之间（不含两个端点）。 |
+
+2. 常量扩展
+
+| 方法                    | 描述                                                  |
+| ----------------------- | ----------------------------------------------------- |
+| Number.EPSILON          | 1 与大于 1 的浮点数差，用于精度判断是否在可计算范围内 |
+| Number.MIN_SAFE_INTEGER | 最小安全数。                                          |
+| Number.MAX_SAFE_INTEGER | 最大安全数。                                          |
+
+:::
+
+:::snippet 箭头函数
+
+1. 箭头函数定义
+
+```javascript
+// 默认执行表达式并返回
+var f = v => v;
+// 执行代码块返回
+var sum = (num1, num2) => {
+  return num1 + num2;
+};
+```
+
+2. 特点
+
+（1）函数体内的 this 对象，就是定义时所在的对象，而不是使用时所在的对象。
+
+（2）不可以当作构造函数，也就是说，不可以使用 new 命令，否则会抛出一个错误。
+
+（3）不可以使用 arguments 对象，该对象在函数体内不存在。如果要用，可以用 rest 参数代替。
+
+（4）不可以使用 yield 命令，因此箭头函数不能用作 Generator 函数。
+
+3. 箭头函数转码
+
+```javascript
+// ES6
+function foo() {
+  setTimeout(() => {
+    console.log("id:", this.id);
+  }, 100);
+}
+
+// ES5
+function foo() {
+  var _this = this;
+
+  setTimeout(function() {
+    console.log("id:", _this.id);
+  }, 100);
+}
+```
+
+4. this 固话，代表外层代码块的 this 对象
+
+```javascript
+function foo() {
+  return () => {
+    return () => {
+      return () => {
+        console.log("id:", this.id);
+      };
+    };
+  };
+}
+var f = foo.call({ id: 1 });
+var t1 = f.call({ id: 2 })()(); // id: 1
+var t2 = f().call({ id: 3 })(); // id: 1
+var t3 = f()().call({ id: 4 }); // id: 1
+```
+
+5. :: 双冒号运算符
+
+```javascript
+foo::bar;
+// 等同于
+bar.bind(foo);
+
+foo::bar(...arguments);
+// 等同于
+bar.apply(foo, arguments);
+
+var method = obj::obj.foo;
+// 等同于
+var method = ::obj.foo;
+```
+
+:::
+
+:::snippet 数组扩展
+
+1. Array.from 提取新的数组
+
+```javascript
+let array = [1, 2, 3, 4, 5, 6, 7, 8, 9];
+let newArray = Array.from(array, x => x < 5); //[1,2,5,4]
+let objArray = [{ a: 1, b: 2 }, { a: 2, b: 2 }, { a: 3, b: 2 }];
+let newObjArray = Array.from(array, x => {
+  return { n: x.a };
+}); //[{n:1},{n:2},{n:3}]
+```
+
+2. Array.of 转换为数组
+
+```javascript
+Array.of(3, 11, 8); // [3,11,8]
+```
+
+3. 实例扩展方法
+
+| 方法      | 描述                                             |
+| --------- | ------------------------------------------------ |
+| find      | 查找满足条件的第一个元素，未找到范围 undefined。 |
+| findIndex | 查找满足条件的第一个元素索引，未找到范围 -1。    |
+| fill      | 数组内容填充。                                   |
+| includes  | 数组是否包含给定的值，返回 Boolean。             |
+| flat      | 拉平数组。                                       |
+
+```javascript
+[1, 4, -5, 10].find(n => n < 0); //-5
+[1, 5, 10, 15].findIndex(function(value, index, arr) {
+  return value > 9;
+}); // 2
+["a", "b", "c"].fill(7); // [7, 7, 7]
+[1, 2, 3].includes(2); // true
+[1, 2, [3]].flat() // [1, 2, 3]
+[(1, [2, [3]])].flat(Infinity); // [1, 2, 3]
+```
+
+:::
+
+:::snippet Object 扩展方法
+
+| 方法            | 描述                   |
+| --------------- | ---------------------- |
+| Object.is()     | 判断两个对象是否相等。 |
+| Object.assign() | 对象的合并             |
+
+```javascript
+Object.is("foo", "foo"); // true
+Object.is(NaN, NaN); // true
+Object.is({}, {}); // false
+```
+
+```javascript
+const obj1 = { a: { b: 1 } };
+const obj2 = Object.assign({}, obj1);
+obj1.a.b = 2;
+obj2.a.b; // 2
+
+Object.assign({ a: "b" }, { [Symbol("c")]: "d" }); // { a: 'b', Symbol(c): 'd' }
 ```
 
 :::
