--- a/src/notes/javascript/07.md
+++ b/src/notes/javascript/07.md
@@ -438,7 +438,7 @@ alert(sum.length); //2
 alert(sayHi.length); //0
 ```
 
-2. `prototype` 属性：保存函数所有实例方法的真正所在，prototype 属性是不可枚举的，因此使用 for-in 无法发现
+2. `prototype` 属性：保存函数所有实例方法的真正所在，`prototype` 属性是不可枚举，因此使用 `for-in` 无法发现
 
 3. `call()` 方法：改变 this 指向调用函数 `fun.call(this指向对象,param1,param2,...)`
 
