--- a/src/notes/javascript/08.md
+++ b/src/notes/javascript/08.md
@@ -1,7 +1,7 @@
 :::snippet Boolean 类型
 
-1. 与基本的基本类型 `Boolean` 基本一致，差别不大
-2. 相当于 `Boolean` 转换没什么太大区别
+1. 与基本的基本类型 `Boolean` 基本一致，差别不大.
+2. 相当于 `Boolean` 转换没什么太大区别.
 3. 实例化
 
 ```JavaScript
@@ -23,14 +23,14 @@ alert(falseValue instanceof Boolean); //false
 
 :::snippet Number 类型
 
-1. `Number` 是与数字值对应的引用类型
+1. `Number` 是与数字值对应的引用类型.
 
 ```JavaScript
 var numberObject = new Number(10);
 NumberTypeExample01
 ```
 
-2. 重写了 `valueOf()`、`toLocaleString()`和 `toString()`
+2. 重写了 `valueOf()` 、`toLocaleString()` 和 `toString()` 。
 
 ```JavaScript
 var num = 10;
@@ -41,7 +41,7 @@ alert(num.toString(10)); //"10"
 alert(num.toString(16)); //"a"
 ```
 
-3. 精度格式化
+3. 精度格式化。
 
 ```JavaScript
 var num = 10;
@@ -59,7 +59,7 @@ alert(num.toPrecision(2)); //"99"
 alert(num.toPrecision(3)); //"99.0"
 ```
 
-4. 类型判断
+4. 类型判断。
 
 ```JavaScript
 var numberObject = new Number(10);
@@ -74,7 +74,7 @@ alert(numberValue instanceof Number); //false
 
 :::snippet String 类型
 
-包装类型的方法与属性跟基本类型一致
+包装类型的方法与属性跟基本类型一致。
 
 ```JavaScript
 var stringObject = new String("hello world");
@@ -247,7 +247,7 @@ alert(String.fromCharCode(104, 101, 108, 108, 111)); //"hello"
 
 :::snippet String HTML 生成方法
 
-字符串自带方法直接可以生成 html 标签字符串
+字符串自带方法直接可以生成 `html` 标签字符串。
 
 > 一般尽量不适用这些方法
 
@@ -255,7 +255,7 @@ alert(String.fromCharCode(104, 101, 108, 108, 111)); //"hello"
 
 :::snippet Global 属性和方法
 
-1. 例如 `undefined`、`NaN`、`Error`、`Date` 等都属于 `Global` 的属性
+1. 例如 `undefined`、`NaN`、`Error`、`Date` 等都属于 `Global` 的属性。
 
 2. URI 编码方法
 
@@ -277,7 +277,7 @@ eval("alert('hi')");=>alert("hi");//相当于转为这个代码执行
 
 :::snippet window 对象
 
-web 浏览器的窗体属性
+web 浏览器的窗体属性。
 
 ```JavaScript
 var color = "red";
@@ -291,10 +291,10 @@ window.sayColor(); //"red"
 
 :::snippet Math 对象
 
-1. Math 对象的属性：`Math.PI`、`Math.LN10` 等数学中的常量
-2. Math 对象的方法：`Math.max()`，`Math.min()`，`Math.ceil()`等常用数学方法
-3. Math 获取随机数：`random()` 方法，获取 `0-1` 之间的随机数
-4. 其他的方法使用在参照 API
-5. 复杂高精度计算可以使用第三方库 [mathjs](https://github.com/josdejong/mathjs)
+1. Math 对象的属性：`Math.PI`、`Math.LN10` 等数学中的常量。
+2. Math 对象的方法：`Math.max()`，`Math.min()`，`Math.ceil()`等常用数学方法。
+3. Math 获取随机数：`random()` 方法，获取 `0-1` 之间的随机数。
+4. 其他的方法使用在参照 API。
+5. 复杂高精度计算可以使用第三方库 [mathjs](https://github.com/josdejong/mathjs)。
 
 :::
