--- a/src/notes/javascript/02.md
+++ b/src/notes/javascript/02.md
@@ -86,8 +86,8 @@ var message = "hi",found = false,age = 29;
 
 :::snippet 数据类型
 
-1. 5 种简单数据类型（也称为基本数据类型）：`Undefined`、`Null`、`Boolean`、`Number`和`String`。
-2. 数据类型都可以通过关键字`typeof`操作符，获取字段的类型。
+1. 5 种简单数据类型（也称为基本数据类型）：`Undefined` 、`Null` 、`Boolean` 、`Number` 和 `String`。
+2. 数据类型都可以通过关键字 `typeof` 操作符，获取字段的类型。
 
 | 类型      | 描述          |
 | :-------- | :------------ |
@@ -98,7 +98,7 @@ var message = "hi",found = false,age = 29;
 | object    | 对象或者 null |
 | function  | 函数          |
 
-3. `typeof`获取对应的数据类型。
+3. `typeof` 获取对应的数据类型。
 
 ```javascript
 alert(typeof message); // "string"
@@ -143,7 +143,7 @@ alert(typeof age); // "undefined"
 
 :::snippet Null 类型
 
-1. `Null` 类型的值只有`null`，`typeof` 检测返回 `object` 类型。
+1. `Null` 类型的值只有 `null` ，`typeof` 检测返回 `object` 类型。
 2. `undefined` 值是派生自 `null` 值的，因此 ECMA 规定对它们的相等性测试要返回 `true` 。
 
 ```JavaScript
@@ -260,7 +260,7 @@ alert(isNaN(true)); //false（可以被转换成数值1）
 
 7. 数值类型转换。
 
-`Number()`方法
+`Number()` 方法
 
 ```JavaScript
 //如果是 Boolean 值，true 和false 将分别被转换为1 和0
@@ -288,7 +288,7 @@ Number("hello");//NaN
 
 > Number(null)等于 0，Number(undefined)等于 NaN
 
-`parseInt()`方法
+`parseInt()` 方法
 
 ```JavaScript
 parseInt("1234blue"); // 1234
@@ -308,7 +308,7 @@ parseInt("10", 10); //10 （按十进制解析）
 parseInt("10", 16); //16 （按十六进制解析）
 ```
 
-`parseFloat()`方法
+`parseFloat()` 方法
 
 ```JavaScript
 parseFloat("1234blue"); //1234 （整数）
@@ -338,8 +338,7 @@ parseFloat("3.125e7"); //31250000
 | \xnn     | 以十六进制代码 nn 表示的一个字符（其中 n 为 0 ～ F）。例如，\x41 表示"A"                     |
 | \unnnn   | 以十六进制代码 nnnn 表示的一个 Unicode 字符（其中 n 为 0 ～ F）。例如，\u03a3 表示希腊字符 Σ |
 
-2. 字符串特点
-   字符串是不可变的，也就是说，字符串一旦创建，它们的值就不能改变
+2. 字符串特点：字符串是不可变的，也就是说，字符串一旦创建，它们的值就不能改变。
 
 ```JavaScript
 var lang = "Java";
@@ -350,7 +349,7 @@ lang = lang + "Script";
 //但这些浏览器后来的版本已经解决了这个低效率问题
 ```
 
-3. 字符串转换
+3. 字符串转换。
 
 ```JavaScript
 var age = 11;
@@ -382,7 +381,7 @@ alert(String(undefined)); // "undefined"
 1. `constructor`：保存着用于创建当前对象的函数。对于前面的例子而言，构造函数（`constructor`）就是 `Object()`。
 2. `hasOwnProperty(propertyName)`：用于检查给定的属性在当前对象实例中（而不是在实例的原型中）是否存在。其中，作为参数的属性名（propertyName）必须以字符串形式指定（例如：o.hasOwnProperty("name")）。
 3. `isPrototypeOf(object)`：用于检查传入的对象是否是传入对象的原型。
-4. `propertyIsEnumerable(propertyName)`：用于检查给定的属性是否能够使用 for-in 语句来枚举。与 hasOwnProperty()方法一样，作为参数的属性名必须以字符串形式指定。
+4. `propertyIsEnumerable(propertyName)`：用于检查给定的属性是否能够使用 `for-in` 语句来枚举。与 `hasOwnProperty()` 方法一样，作为参数的属性名必须以字符串形式指定。
 5. `toLocaleString()`：返回对象的字符串表示，该字符串与执行环境的地区对应。
 6. `toString()`：返回对象的字符串表示。
 7. `valueOf()`：返回对象的字符串、数值或布尔值表示。通常与 `toString()`方法的返回值相同。
