--- a/src/notes/javascript/05.md
+++ b/src/notes/javascript/05.md
@@ -62,7 +62,7 @@ alert(count); //20，没有变化
 alert(result); //30
 ```
 
-2. 引用类型参数，方法内部改变值`属性`值外部也会跟着改变。
+2. 引用类型参数，方法内部改变值 `property` 值外部也会跟着改变。
 
 ```JavaScript
 function setName(obj) {
@@ -91,7 +91,7 @@ alert(person.name); //"Nicholas"
 :::snippet 检测类型
 
 1. 基本类型的检测可以使用关键字 `typeof` 来进行检测。
-2. `Object` 类型对应的具体类型，要用`instanceof`来检测。
+2. `Object` 类型对应的具体类型，要用 `instanceof` 来检测。
 
 ```JavaScript
 alert(person instanceof Object); // 变量person 是Object 吗？
@@ -99,7 +99,7 @@ alert(colors instanceof Array); // 变量colors 是Array 吗？
 alert(pattern instanceof RegExp); // 变量pattern 是RegExp 吗？
 ```
 
-3. 5 中基本类型使用`instanceof`检测都会返回 `false` 。
+3. 5 中基本类型使用 `instanceof` 检测都会返回 `false` 。
 
 :::
 
@@ -140,7 +140,7 @@ function buildUrl() {
 
 :::snippet 没有块级作用域
 
-1. 由于不存在块级作用域，`i` 变量定义后为`window`对象的属性成为全局变量，所以循环完后 `i` 的值为 10。
+1. 由于不存在块级作用域，`i` 变量定义后为 `window` 对象的属性成为全局变量，所以循环完后 `i` 的值为 10。
 
 ```JavaScript
 for (var i=0; i < 10; i++){
@@ -149,7 +149,7 @@ for (var i=0; i < 10; i++){
 alert(i); //10
 ```
 
-2. 默认声明变量不加`var`为全局变量，属于`window`对象的属性。
+2. 默认声明变量不加 `var` 为全局变量，属于 `window` 对象的属性。
 
 ```JavaScript
 function add(num1, num2) {
@@ -184,7 +184,7 @@ alert(getColor()); //"red"
 
 :::snippet 垃圾收集
 
-1. 标记清除：通过代码的执行位置，`进入环境`和`离开环境`标记，使用完成后，等待到垃圾回收执行时间，自动回收。
+1. 标记清除：通过代码的执行位置，`进入环境` 和 `离开环境` 标记，使用完成后，等待到垃圾回收执行时间，自动回收。
 2. 引用计数：通过代码的引用次数来做标记，使用完成后，等待到垃圾回收执行时间，自动回收。
 
 ```JavaScript
