--- a/src/notes/javascript/08.md
+++ b/src/notes/javascript/08.md
@@ -1,7 +1,7 @@
 :::snippet Boolean 类型
 
-1. 与基本的基本类型 `Boolean` 基本一致，差别不大.
-2. 相当于 `Boolean` 转换没什么太大区别.
+1. 与基本的基本类型 `Boolean` 基本一致，差别不大。
+2. 相当于 `Boolean` 转换没什么太大区别。
 3. 实例化
 
 ```JavaScript
@@ -23,7 +23,7 @@ alert(falseValue instanceof Boolean); //false
 
 :::snippet Number 类型
 
-1. `Number` 是与数字值对应的引用类型.
+1. `Number` 是与数字值对应的引用类型。
 
 ```JavaScript
 var numberObject = new Number(10);
@@ -166,7 +166,7 @@ alert(stringValue.toLowerCase()); //"hello world"
 
 :::snippet String 字符串位置方法
 
-- `indexOf()` 方法
+1. `indexOf()` 方法
 
 ```JavaScript
 var stringValue = "hello world";
@@ -174,7 +174,7 @@ alert(stringValue.indexOf("o")); //4
 alert(stringValue.indexOf("o", 6)); //7
 ```
 
-- `lastIndexOf()` 方法
+2. `lastIndexOf()` 方法
 
 ```JavaScript
 var stringValue = "hello world";
