--- a/src/notes/javascript/09.md
+++ b/src/notes/javascript/09.md
@@ -1,6 +1,6 @@
 :::snippet 对象的定义
 
-1. 定义对象
+1. 定义对象。
 
 ```javascript
 var person = new Object();
@@ -12,7 +12,7 @@ person.sayName = function() {
 };
 ```
 
-2. 优化代码
+2. 优化代码。
 
 ```javascript
 var person = {
@@ -29,7 +29,7 @@ var person = {
 
 :::snippet 属性类型
 
-1. 属性数据类型
+1. 属性数据类型。
 
 | 数据属性     | 描述                                         | 默认值    |
 | ------------ | -------------------------------------------- | --------- |
@@ -38,7 +38,7 @@ var person = {
 | writable     | 表示能否修改属性的值                         | true      |
 | value        | 包含这个属性的数据值                         | undefined |
 
-2. `configurable` 设置为 `false` 就不能再设置为 `true`
+2. `configurable` 设置为 `false` 就不能再设置为 `true`。
 
 ```javascript
 var person = {};
@@ -64,7 +64,7 @@ Object.defineProperty(person, "name", {
 });
 ```
 
-3. `writable`修改属性值
+3. `writable`修改属性值。
 
 ```javascript
 var person = {};
@@ -83,7 +83,7 @@ alert(person.name); //"Nicholas"
 
 :::snippet 访问器属性
 
-1. `Object.defineProperty()` 定义通过 `getter` 和 `setter` 函数访问（IE9+）
+1. `Object.defineProperty()` 定义通过 `getter` 和 `setter` 函数访问（IE9+）。
 
 ```javascript
 var book = {
@@ -105,7 +105,7 @@ book.year = 2005;
 alert(book.edition); //2
 ```
 
-2. 不支持 `Object.defineProperty()`
+2. 不支持 `Object.defineProperty()`。
 
 ```javascript
 var book = {
@@ -191,7 +191,7 @@ alert(typeof descriptor.get); //"function"
 
 :::snippet 创建对象
 
-1. 工厂模式
+1. 工厂模式。
 
 ```javascript
 function createPerson(name, age, job) {
@@ -208,7 +208,7 @@ var person1 = createPerson("Nicholas", 29, "Software Engineer");
 var person2 = createPerson("Greg", 27, "Doctor");
 ```
 
-2. 构造函数模式
+2. 构造函数模式。
 
 ```javascript
 function Person(name, age, job) {
@@ -223,7 +223,7 @@ var person1 = new Person("Nicholas", 29, "Software Engineer");
 var person2 = new Person("Greg", 27, "Doctor");
 ```
 
-3. 组合使用构造函数模式和原型模式
+3. 组合使用构造函数模式和原型模式。
 
 ```javascript
 function Person(name, age, job) {
@@ -247,7 +247,7 @@ alert(person1.friends === person2.friends); //false
 alert(person1.sayName === person2.sayName); //true
 ```
 
-4. 动态原型模式
+4. 动态原型模式。
 
 ```javascript
 function Person(name, age, job) {
@@ -266,7 +266,7 @@ var friend = new Person("Nicholas", 29, "Software Engineer");
 friend.sayName();
 ```
 
-5. 寄生构造函数模式
+5. 寄生构造函数模式。
 
 ```javascript
 function SpecialArray() {
@@ -285,7 +285,7 @@ var colors = new SpecialArray("red", "blue", "green");
 alert(colors.toPipedString()); //"red|blue|green"
 ```
 
-6. 稳妥构造函数模式
+6. 稳妥构造函数模式。
 
 ```javascript
 function Person(name, age, job) {
@@ -305,9 +305,7 @@ function Person(name, age, job) {
 
 :::snippet 继承
 
-1. 原型链
-
-> ECMAScript 中描述了原型链的概念，并将原型链作为实现继承的主要方法。其基本思想是利用原型让一个引用类型继承另一个引用类型的属性和方法
+1. 原型链：ECMAScript 中描述了原型链的概念，并将原型链作为实现继承的主要方法。其基本思想是利用原型让一个引用类型继承另一个引用类型的属性和方法。
 
 ```javascript
 function SuperType() {
@@ -328,7 +326,7 @@ var instance = new SubType();
 alert(instance.getSuperValue()); //true
 ```
 
-2. 借用构造函数
+2. 借用构造函数。
 
 ```javascript
 function SuperType() {
@@ -345,7 +343,7 @@ var instance2 = new SubType();
 alert(instance2.colors); //"red,blue,green"
 ```
 
-3. 组合继承
+3. 组合继承。
 
 ```javascript
 function SuperType(name) {
@@ -377,7 +375,7 @@ instance2.sayName(); //"Greg";
 instance2.sayAge(); //27
 ```
 
-4. 原型式继承
+4. 原型式继承。
 
 ```javascript
 function object(o) {
@@ -387,7 +385,7 @@ function object(o) {
 }
 ```
 
-5. 寄生式继承
+5. 寄生式继承。
 
 ```javascript
 function createAnother(original) {
@@ -400,7 +398,7 @@ function createAnother(original) {
 }
 ```
 
-6. 寄生组合式继承
+6. 寄生组合式继承。
 
 ```javascript
 function SuperType(name) {
@@ -430,6 +428,6 @@ SubType.prototype.sayAge = function() {
 3. 原型模式，使用构造函数的 prototype 属性来指定那些应该共享的属性和方法。组合使用构造函数模式和原型模式时，使用构造函数定义实例属性，而使用原型定义共享的属性和方法。
 4. 原型式继承，可以在不必预先定义构造函数的情况下实现继承，其本质是执行对给定对象的浅复制。而复制得到的副本还可以得到进一步改造。
 5. 寄生式继承，与原型式继承非常相似，也是基于某个对象或某些信息创建一个对象，然后增强对象，最后返回对象。为了解决组合继承模式由于多次调用超类型构造函数而导致的低效率问题，可以将这个模式与组合继承一起使用。
-6. 寄生组合式继承，集寄生式继承和组合继承的优点与一身，是实现基于类型继承的最有效方式
+6. 寄生组合式继承，集寄生式继承和组合继承的优点与一身，是实现基于类型继承的最有效方式。
 
 :::
