--- a/src/notes/javascript/08.md
+++ b/src/notes/javascript/08.md
@@ -237,7 +237,7 @@ alert(stringValue.localeCompare("yellow")); //0
 alert(stringValue.localeCompare("zoo")); //-1
 ```
 
-- `fromCharCode()` 方法
+6. `fromCharCode()` 方法
 
 ```JavaScript
 alert(String.fromCharCode(104, 101, 108, 108, 111)); //"hello"
