--- a/src/notes/javascript/10.md
+++ b/src/notes/javascript/10.md
@@ -1,6 +1,6 @@
 :::snippet 函数声明
 
-通过关键字 `function` 声明函数
+通过关键字 `function` 声明函数。
 
 ```javascript
 function functionName(arg0, arg1, arg2) {
@@ -10,7 +10,7 @@ function functionName(arg0, arg1, arg2) {
 alert(functionName.name); //"functionName"
 ```
 
-> Firefox、Safari、Chrome 和 Opera 都给函数定义了一个非标准的函数属性名称 `name`
+> Firefox、Safari、Chrome 和 Opera 都给函数定义了一个非标准的函数属性名称 `name`。
 
 :::
 
@@ -29,7 +29,7 @@ function sayHi() {
 
 :::snippet 函数表达式
 
-1. 变量赋值语句，创建一个函数并将它赋值给变量 `functionName`
+1. 变量赋值语句，创建一个函数并将它赋值给变量 `functionName`。
 
 ```javascript
 var functionName = function(arg0, arg1, arg2) {
@@ -40,7 +40,7 @@ var functionName = function(arg0, arg1, arg2) {
 > 通过变量创建的函数叫做匿名函数(anonymous function)，因为 function 关键字后面没有标识符
 > 匿名函数有时候也叫拉姆达函数,匿名函数的 name 属性是空字符串
 
-2. 函数表达式与其他表达式一样，在使用前必须先赋值
+2. 函数表达式与其他表达式一样，在使用前必须先赋值。
 
 ```javascript
 sayHi(); //错误:函数还不存在
@@ -53,7 +53,7 @@ var sayHi = function() {
 
 :::snippet 函数表达式赋值
 
-1. 动态赋值函数
+1. 动态赋值函数。
 
 ```javascript
 //不要这样做!
@@ -81,9 +81,9 @@ if (condition) {
 }
 ```
 
-> 不同浏览器对声明函数有不同的处理方式，重复声明有的覆盖最后一个为准，有的第一个为准，所以动态声明函数使用函数表达式声明保证调用对应函数
+> 不同浏览器对声明函数有不同的处理方式，重复声明有的覆盖最后一个为准，有的第一个为准，所以动态声明函数使用函数表达式声明保证调用对应函数。
 
-2. 函数表达式还可以内部声明匿名函数再返回得到一个函数表达式
+2. 函数表达式还可以内部声明匿名函数再返回得到一个函数表达式。
 
 ```javascript
 function createComparisonFunction(propertyName) {
@@ -105,7 +105,7 @@ function createComparisonFunction(propertyName) {
 
 :::snippet 递归
 
-1. 递归函数是在一个函数通过名字调用自身的情况下构成
+1. 递归函数是在一个函数通过名字调用自身的情况下构成。
 
 ```javascript
 function factorial(num) {
@@ -118,7 +118,7 @@ function factorial(num) {
 }
 ```
 
-2. 函数引用，声明函数在设置为 `null` 会导致函数引用都为 `null` 调用函数会报错
+2. 函数引用，声明函数在设置为 `null` 会导致函数引用都为 `null` 调用函数会报错。
 
 ```javascript
 var anotherFactorial = factorial;
@@ -126,7 +126,7 @@ factorial = null;
 alert(anotherFactorial(4)); //出错!
 ```
 
-3. 非标准模式递归调用使用`arguments.callee`设置函数调用本身
+3. 非标准模式递归调用使用`arguments.callee`设置函数调用本身。
 
 ```javascript
 function factorial(num) {
@@ -138,7 +138,7 @@ function factorial(num) {
 }
 ```
 
-4. 通用的递归函数，采用匿名函数表达式来构建
+4. 通用的递归函数，采用匿名函数表达式来构建。
 
 ```javascript
 var factorial = function f(num) {
@@ -153,7 +153,7 @@ var factorial = function f(num) {
 
 :::snippet 闭包
 
-闭包是指有权访问另一个 函数作用域中的变量的函数。创建闭包的常见方式，就是在一个函数内部创建另一个函数
+闭包是指有权访问另一个 函数作用域中的变量的函数。创建闭包的常见方式，就是在一个函数内部创建另一个函数。
 
 ```javascript
 function createComparisonFunction(propertyName) {
@@ -189,11 +189,11 @@ function compare(value1, value2) {
 var result = compare(5, 10);
 ```
 
-1. 定义了 `compare()` 函数，全局作用域调用会保存引用到全局作用域中
-2. 当调用 `compare()` 时，会创建一个包含 `arguments` 、 `value1` 和 `value2` 的活动对象，活动对象的作用域在该函数内部
-3. 全局执行环境的变量对象(包含 `result` 和 `compare` )在 `compare()` 执行环境的作用域链，函数执行完成只会最终保留结果作用域
+1. 定义了 `compare()` 函数，全局作用域调用会保存引用到全局作用域中。
+2. 当调用 `compare()` 时，会创建一个包含 `arguments` 、 `value1` 和 `value2` 的活动对象，活动对象的作用域在该函数内部。
+3. 全局执行环境的变量对象(包含 `result` 和 `compare` )在 `compare()` 执行环境的作用域链，函数执行完成只会最终保留结果作用域。
 
-> 无论什么时候在函数中访问一个变量时，就会从作用域链中搜索具有相应名字的变量，执行完毕局部对象就会被销毁，但是闭包将参数、引用变量添加到调用的作用域上所以函数执行完毕，局部对象也还未被销毁，只有所有的引用对象被释放才会被销毁
+> 无论什么时候在函数中访问一个变量时，就会从作用域链中搜索具有相应名字的变量，执行完毕局部对象就会被销毁，但是闭包将参数、引用变量添加到调用的作用域上所以函数执行完毕，局部对象也还未被销毁，只有所有的引用对象被释放才会被销毁。
 
 :::
 
@@ -222,7 +222,7 @@ compareNames = null;
 
 :::snippet 闭包与变量
 
-1. 闭包所保存的是整个变量对象，而不是某个特殊的变量
+1. 闭包所保存的是整个变量对象，而不是某个特殊的变量。
 
 ```javascript
 function createFunctions() {
@@ -236,11 +236,11 @@ function createFunctions() {
 }
 ```
 
-> 每个函数都应该返自己的索引值，即位置 0 的函数 返回 0，位置 1 的函数返回 1，以此类推。但实际上，每个函数都返回 10
-> 每个函数的作用域链中 都保存着 createFunctions()函数的活动对象，所以它们引用的都是同一个变量 i
-> 当 createFunctions()函数返回后，变量 i 的值是 10，此时每个函数都引用着保存变量 i 的同一个变量 对象，所以在每个函数内部 i 的值都是 10
+> 每个函数都应该返自己的索引值，即位置 0 的函数 返回 0，位置 1 的函数返回 1，以此类推。但实际上，每个函数都返回 10。
+> 每个函数的作用域链中 都保存着 createFunctions()函数的活动对象，所以它们引用的都是同一个变量 i。
+> 当 createFunctions()函数返回后，变量 i 的值是 10，此时每个函数都引用着保存变量 i 的同一个变量 对象，所以在每个函数内部 i 的值都是 10。
 
-2. 匿名函数强制让闭包的行为,符合预期
+2. 匿名函数强制让闭包的行为,符合预期。
 
 ```javascript
 function createFunctions() {
@@ -260,7 +260,7 @@ function createFunctions() {
 
 :::snippet 闭包与 this
 
-1. 匿名函数的执行环境具有全局性，因此其 this 对象通常指向 window
+1. 匿名函数的执行环境具有全局性，因此其 `this` 对象通常指向 `window`。
 
 ```javascript
 var name = "The Window";
@@ -275,7 +275,7 @@ var object = {
 alert(object.getNameFunc()()); //"The Window"(在非严格模式下)
 ```
 
-2. 外部作用域中的 this 对象保存在一个闭包能够访问到的变量里，就可以让闭包访问该对象
+2. 外部作用域中的 `this` 对象保存在一个闭包能够访问到的变量里，就可以让闭包访问该对象。
 
 ```javascript
 var name = "The Window";
@@ -291,9 +291,9 @@ var object = {
 alert(object.getNameFunc()()); //"My Object"
 ```
 
-> this 和 arguments 也存在同样的问题。如果想访问作用域中的 arguments 对 象，必须将对该对象的引用保存到另一个闭包能够访问的变量中
+> this 和 arguments 也存在同样的问题。如果想访问作用域中的 arguments 对 象，必须将对该对象的引用保存到另一个闭包能够访问的变量中。
 
-3. 赋值设置会改变闭包中匿名函数的 this
+3. 赋值设置会改变闭包中匿名函数的 `this`。
 
 ```javascript
 var name = "The Window";
@@ -309,13 +309,13 @@ object.getName(); //"My Object"
 (object.getName = object.getName)(); //"The Window"，在非严格模式下
 ```
 
-> 赋值表达式的值是 函数本身，所以 this 的值不能得到维持，结果就返回了"The Window"
+> 赋值表达式的值是 函数本身，所以 `this` 的值不能得到维持，结果就返回了"The Window"
 
 :::
 
 :::snippet 闭包内存泄漏
 
-1. IE9 中使用计数来管理内存的释放，所以引用存在就会导致内存的一直被保存
+1. IE9 中使用计数来管理内存的释放，所以引用存在就会导致内存的一直被保存。
 
 ```javascript
 function assignHandler() {
@@ -345,7 +345,7 @@ function assignHandler() {
 
 :::snippet 闭包模仿块级作用域
 
-1. JavaScript 默认没有块级作用域
+1. JavaScript 默认没有块级作用域。
 
 ```javascript
 function outputNumbers(count) {
@@ -357,7 +357,7 @@ function outputNumbers(count) {
 }
 ```
 
-2. 声明变量覆盖，销毁引用重新定义取值
+2. 声明变量覆盖，销毁引用重新定义取值。
 
 ```javascript
 function outputNumbers(count) {
@@ -377,7 +377,7 @@ function outputNumbers(count) {
 })();
 ```
 
-4. 匿名函数定义规则
+4. 匿名函数定义规则。
 
 ```javascript
 function(){ //这里是块级作用域
@@ -386,7 +386,7 @@ function(){ //这里是块级作用域
 
 > JavaScript 将 function 关键字当作一个函数声明的开始，而函数声明后面不能用括号进行函数名称的定义
 
-5. 匿名函数通过括号定义函数并且设置为变量，在调用防止 function 定义函数规则冲突
+5. 匿名函数通过括号定义函数并且设置为变量，在调用防止 function 定义函数规则冲突。
 
 ```javascript
 (function() {
@@ -398,7 +398,7 @@ function(){ //这里是块级作用域
 
 :::snippet 闭包私有作用域
 
-1. 私有作用域限制变量的访问
+1. 私有作用域限制变量的访问。
 
 ```javascript
 function outputNumbers(count) {
@@ -411,7 +411,7 @@ function outputNumbers(count) {
 }
 ```
 
-2. 私有作用域定义局部变量，执行函数释放内存减少引用
+2. 私有作用域定义局部变量，执行函数释放内存减少引用。
 
 ```javascript
 (function() {
@@ -422,13 +422,13 @@ function outputNumbers(count) {
 })();
 ```
 
-> 定义局部变量，函数执行完毕后，没有指向匿名函数的引用。只要函 数执行完毕，就可以立即销毁其作用域链了
+> 定义局部变量，函数执行完毕后，没有指向匿名函数的引用。只要函数执行完毕，就可以立即销毁其作用域链了。
 
 :::
 
 :::snippet 私有变量
 
-1. 定义私有变量通过特权方法访问
+1. 定义私有变量通过特权方法访问。
 
 ```javascript
 function MyObject() {
@@ -445,7 +445,7 @@ function MyObject() {
 }
 ```
 
-2. 通过特权方法限制变量的访问和赋值
+2. 通过特权方法限制变量的访问和赋值。
 
 ```javascript
 function Person(name) {
@@ -488,13 +488,13 @@ alert(person1.getName()); //"Michael"
 alert(person2.getName()); //"Michael"
 ```
 
-> 查找作用域链中的一个层次，就会在一定程度上影响查找速度。而这正是使用 闭包和私有变量的一个显明的不足之处
+> 查找作用域链中的一个层次，就会在一定程度上影响查找速度。而这正是使用 闭包和私有变量的一个显明的不足之处。
 
 :::
 
 :::snippet 模块模式
 
-匿名函数返回对象，限制内部变量操作，通过方法设置访问赋值同一个内部变量
+匿名函数返回对象，限制内部变量操作，通过方法设置访问赋值同一个内部变量。
 
 ```javascript
 var singleton = (function() {
@@ -514,13 +514,13 @@ var singleton = (function() {
 })();
 ```
 
-> 通过公共方法管理变量，外部通过同一个对象维护共同的变量，整个程序共同维护同一内部变量构成了单例模式
+> 通过公共方法管理变量，外部通过同一个对象维护共同的变量，整个程序共同维护同一内部变量构成了单例模式。
 
 :::
 
 :::snippet 增强的模块模式
 
-限制公共特权方法参数类型与变量类型，定义调用方法必须指定类型
+限制公共特权方法参数类型与变量类型，定义调用方法必须指定类型。
 
 ```javascript
 var application = (function() {
