--- a/src/notes/javascript/04.md
+++ b/src/notes/javascript/04.md
@@ -134,8 +134,6 @@ with(location){
 
 :::snippet switch 语句
 
-`switch` 语句在比较值时使用的是全等操作符 `===` ，因此不会发生类型转换（例如：字符串"10"不等于数值 10）。
-
 1. 基本 switch 语句。
 
 ```JavaScript
@@ -204,6 +202,8 @@ switch (true) {
     alert("More than 20.");
 }
 ```
+
+> `switch` 语句在比较值时使用的是全等操作符 `===` ，因此不会发生类型转换（例如：字符串"10"不等于数值 10）。
 
 :::
 
