--- a/src/notes/javascript/11.md
+++ b/src/notes/javascript/11.md
@@ -1,13 +1,13 @@
 :::snippet window 对象
 
-1. `BOM` 的核心对象是 `window` ，它表示浏览器的一个实例
-2. 网页中定义的任何一个对象、变量和函数，都以 `window` 作为其 `Global` 对象，因此有权访问 `parseInt()` 等方法
+1. `BOM` 的核心对象是 `window` ，它表示浏览器的一个实例。
+2. 网页中定义的任何一个对象、变量和函数，都以 `window` 作为其 `Global` 对象，因此有权访问 `parseInt()` 等方法。
 
 :::
 
 :::snippet window 全局作用域
 
-1. `window` 对象同时扮演着 `ECMAScript` 中 `Global` 对象的角色，因此所有在全局作用域中声明的变量、函数都会变成 `window` 对象的属性和方法
+1. `window` 对象同时扮演着 `ECMAScript` 中 `Global` 对象的角色，因此所有在全局作用域中声明的变量、函数都会变成 `window` 对象的属性和方法。
 
 ```javascript
 var age = 29;
@@ -19,7 +19,7 @@ sayAge(); //29
 window.sayAge(); //29
 ```
 
-2. `delete` 删除全局变量
+2. `delete` 删除全局变量。
 
 ```javascript
 var age = 29;
@@ -32,7 +32,7 @@ alert(window.age); //29
 alert(window.color); //undefined
 ```
 
-3. 通过 `window` 查询访问全局变量
+3. 通过 `window` 查询访问全局变量。
 
 ```javascript
 //这里会抛出错误，因为 oldValue 未定义
@@ -47,7 +47,7 @@ var newValue = window.oldValue;
 :::snippet 窗口及框架关系
 
 1. 如果页面中包含框架，则每个框架都拥有自己的 `window` 对象，并且保存在 `frames` 集合中。
-2. 在 `frames` 集合中，可以通过数值索引(从 0 开始，从左至右，从上到下)或者框架名来访问相应的 `window` 对象
+2. 在 `frames` 集合中，可以通过数值索引(从 0 开始，从左至右，从上到下)或者框架名来访问相应的 `window` 对象。
 
 ```html
 <html>
@@ -64,23 +64,23 @@ var newValue = window.oldValue;
 </html>
 ```
 
-> 通过 `window.frames[0]` 或者 `window.frames["topFrame"]` 来访问框架，不过最好用过 `top.frames[0]` 访问，`window.top` 为最外层的窗口对象
+> 通过 `window.frames[0]` 或者 `window.frames["topFrame"]` 来访问框架，不过最好用过 `top.frames[0]` 访问，`window.top` 为最外层的窗口对象。
 
 :::
 
 :::snippet 窗口对象关系
 
-1. `window.parent` 父级窗口对象
-2. `window.top` 顶层窗口对象
-3. `window.self` 当前窗口对象
+1. `window.parent` 父级窗口对象。
+2. `window.top` 顶层窗口对象。
+3. `window.self` 当前窗口对象。
 
 :::
 
 :::snippet 窗口位置
 
-1. IE、Safari、Opera 和 Chrome 都提供了 screenLeft 和 screenTop 属性，分别用于表示窗口相对于屏幕左边和上边的位置
-2. Firefox 则在 screenX 和 screenY 属性中提供相同的窗口位置信息，Opera、Safari 和 Chrome 也同时支持这两个属性
-3. 通用获取浏览器窗口窗口左边和上边的位置
+1. IE、Safari、Opera 和 Chrome 都提供了 screenLeft 和 screenTop 属性，分别用于表示窗口相对于屏幕左边和上边的位置。
+2. Firefox 则在 screenX 和 screenY 属性中提供相同的窗口位置信息，Opera、Safari 和 Chrome 也同时支持这两个属性。
+3. 通用获取浏览器窗口窗口左边和上边的位置。
 
 ```javascript
 var leftPos =
@@ -89,7 +89,7 @@ var topPos =
   typeof window.screenTop == "number" ? window.screenTop : window.screenY;
 ```
 
-4. 移动浏览器窗口位置 `moveTo()` 和 `moveBy()` 方法
+4. 移动浏览器窗口位置 `moveTo()` 和 `moveBy()` 方法。
 
 ```javascript
 //将窗口移动到屏幕左上角
@@ -128,7 +128,7 @@ if (typeof pageWidth != "number") {
 }
 ```
 
-5. `resizeTo()` 和 `resizeBy()` 方法可以调整浏览器窗口的大小
+5. `resizeTo()` 和 `resizeBy()` 方法可以调整浏览器窗口的大小。
 
 ```javascript
 //调整到 100×100
@@ -141,13 +141,13 @@ window.resizeTo(300, 300);
 
 > `resizeTo()` 和 `resizeBy()` ，这两个方法与移动窗口位置的方法类似，也有可能被浏览器禁用;而且，在 Opera 和 IE7(及更高版本)中默认就是禁用的。另外，这两个方法同样不适用于框架，而只能对最外层的 window 对象使用。
 
-6. 移动设备窗口详细研究文章 [详细地址](http://t.cn/zOZs0Tz)
+6. 移动设备窗口详细研究文章 [详细地址](http://t.cn/zOZs0Tz)。
 
 :::
 
 :::snippet 导航和打开窗口
 
-1. `window.open()` 方法既可以导航到一个特定的 URL，也可以打开一个新的浏览器窗口
+1. `window.open()` 方法既可以导航到一个特定的 URL，也可以打开一个新的浏览器窗口。
 
 ```javascript
 //等同于< a href="http://www.wrox.com" target="topFrame"></a>
@@ -155,7 +155,7 @@ window.resizeTo(300, 300);
 window.open("http://www.wrox.com/", "topFrame");
 ```
 
-2. 窗口参数配置
+2. 窗口参数配置。
 
 ```javascript
 window.open(
@@ -165,7 +165,7 @@ window.open(
 );
 ```
 
-3. 打开窗口返回窗口的引用对象
+3. 打开窗口返回窗口的引用对象。
 
 ```javascript
 var wroxWin = window.open("http://www.wrox.com/", "wroxWindow");
@@ -175,14 +175,14 @@ wroxWin.resizeTo(500, 500);
 wroxWin.moveTo(100, 100);
 ```
 
-4. 窗口的关闭，除了自己打开的窗口可以关闭，其他的窗口出于浏览器安全限制不可是调用关闭方法
+4. 窗口的关闭，除了自己打开的窗口可以关闭，其他的窗口出于浏览器安全限制不可是调用关闭方法。
 
 ```javascript
 wroxWin.close();
 alert(wroxWin.closed); //true
 ```
 
-5. 顶层窗体 `top` 新创建的 `window` 对象有一个 `opener` 属性，其中保存着打开它的原始窗口对象
+5. 顶层窗体 `top` 新创建的 `window` 对象有一个 `opener` 属性，其中保存着打开它的原始窗口对象。
 
 ```javascript
 var wroxWin = window.open(
@@ -196,7 +196,7 @@ alert(wroxWin.opener == window); //true
 wroxWin.opener = null;
 ```
 
-6. 浏览器插件会限制窗口的打开，可以进行窗口打开检测
+6. 浏览器插件会限制窗口的打开，可以进行窗口打开检测。
 
 ```javascript
 var blocked = false;
@@ -217,7 +217,7 @@ if (blocked) {
 
 :::snippet 间歇调用和超时调用
 
-1. 超时调用，指定时间间隔后调用一次
+1. 超时调用，指定时间间隔后调用一次。
 
 ```javascript
 //不建议传递字符串!
@@ -228,7 +228,7 @@ setTimeout(function() {
 }, 1000);
 ```
 
-2. 清除超时调用
+2. 清除超时调用。
 
 ```javascript
 //设置超时调用
@@ -239,7 +239,7 @@ var timeoutId = setTimeout(function() {
 clearTimeout(timeoutId);
 ```
 
-3. 间隔调用，指定时间间隔一直调用
+3. 间隔调用，指定时间间隔一直调用。
 
 ```javascript
 //不建议传递字符串!
@@ -250,7 +250,7 @@ setInterval(function() {
 }, 10000);
 ```
 
-4. 清除间隔调用
+4. 清除间隔调用。
 
 ```javascript
 var num = 0;
@@ -267,14 +267,19 @@ function incrementNumber() {
 intervalId = setInterval(incrementNumber, 500);
 ```
 
-> 超时调用和间隔调用的代码都是在全局作用域中执行的，因此函数中 this 的值在非严格模 式下指向 window 对象，在严格模式下是 undefined
+> 超时调用和间隔调用的代码都是在全局作用域中执行的，因此函数中 `this` 的值在非严格模式下指向 `window` 对象，在严格模式下是 `undefined` 。
 
 :::
 
 :::snippet 系统对话框
 
-1. `alert()` 直接弹出提示警告
-2. `confirm()` 提示确认对话框
+1. `alert()` 直接弹出提示警告。
+
+```javascript
+alert(1);
+```
+
+2. `confirm()` 提示确认对话框。
 
 ```javascript
 if (confirm("Are you sure?")) {
@@ -285,7 +290,7 @@ if (confirm("Are you sure?")) {
 intervalId = setInterval(incrementNumber, 500);
 ```
 
-3. `prompt()` 输入确认框
+3. `prompt()` 输入确认框。
 
 ```javascript
 var result = prompt("What is your name? ", "");
@@ -294,7 +299,7 @@ if (result !== null) {
 }
 ```
 
-4. `print()` 打印对话框，`find()` 查找对话框
+4. `print()` 打印对话框，`find()` 查找对话框。
 
 ```javascript
 //显示“打印”对话框
@@ -322,7 +327,7 @@ window.find();
 
 :::snippet location 操作
 
-1. 查询字符串参数
+1. 查询字符串参数。
 
 ```javascript
 function getQueryStringArgs() {
@@ -355,7 +360,7 @@ alert(args["q"]); //"javascript"
 alert(args["num"]); //"10"
 ```
 
-2. 位置操作
+2. 位置操作。
 
 ```javascript
 location.assign("http://www.wrox.com");
@@ -364,7 +369,6 @@ window.location = "http://www.wrox.com";
 location.href = "http://www.wrox.com";
 
 //假设初始 URL 为 http://www.wrox.com/WileyCDA/
-
 //将 URL 修改为"http://www.wrox.com/WileyCDA/#section1"
 location.hash = "#section1";
 //将 URL 修改为"http://www.wrox.com/WileyCDA/?q=javascript"
@@ -379,13 +383,13 @@ location.port = 8080;
 
 > 每次修改 `location` 的属性( `hash` 除外)，页面都会以新 URL 重新加载。
 
-3. `replace()` 不产生历史记录
+3. `replace()` 不产生历史记录。
 
 ```javascript
 location.replace("http://www.wrox.com/");
 ```
 
-4. `reload()` 重新加载页面
+4. `reload()` 重新加载页面。
 
 ```javascript
 location.reload(); //重新加载(有可能从缓存中加载)
@@ -394,9 +398,9 @@ location.reload(true); //重新加载(从服务器重新加载)
 
 :::
 
-:::snippet navigator 对象
+:::snippet navigator 对象。
 
-1. 检测插件
+1. 检测插件。
 
 ```javascript
 //检测插件(在 IE 中无效)
@@ -446,9 +450,9 @@ alert(hasQuickTime());
 > 检测 IE 中的插件比较麻烦，因为 IE 不支持 Netscape 式的插件。
 > 在 IE 中检测插件的唯一方式就是 使用专有的 ActiveXObject 类型，并尝试创建一个特定插件的实例。
 > IE 是以 COM 对象的方式实现插 件的，而 COM 对象使用唯一标识符来标识。
-> 因此，要想检查特定的插件，就必须知道其 COM 标识符
+> 因此，要想检查特定的插件，就必须知道其 COM 标识符。
 
-2. 注册处理程序
+2. 注册处理程序。
 
 ```javascript
 navigator.registerContentHandler(
@@ -462,7 +466,7 @@ navigator.registerContentHandler(
 
 :::snippet screen 对象
 
-1. `screen` 对象基本上只 用来表明客户端的能力，其中包括浏览器窗口外部的显示器的信息，如像素宽度和高度等
+1. `screen` 对象基本上只 用来表明客户端的能力，其中包括浏览器窗口外部的显示器的信息，如像素宽度和高度等。
 2. 涉及移动设备的屏幕大小时，情况有点不一样。运行 iOS 的设备始终会像是把设备竖着拿在手里一 样，因此返回的值是 768×1024。
 3. Android 设备则会相应调用 `screen.width` 和 `screen.height` 的值。
 
@@ -494,7 +498,6 @@ if (history.length == 0) {
 ```
 
 > 当页面的 URL 改变时，就会生成一条历史记录。在 IE8 及更高版本、Opera、 Firefox、Safari 3 及更高版本以及 Chrome 中，
-> 这里所说的改变包括 URL 中 hash 的变化
-> 因此，设置 location.hash 会在这些浏览器中生成一条新的历史记录
+> 这里所说的改变包括 URL 中 hash 的变化，因此，设置 location.hash 会在这些浏览器中生成一条新的历史记录。
 
 :::
