--- a/src/notes/javascript/08.md
+++ b/src/notes/javascript/08.md
@@ -2,7 +2,7 @@
 
 1. 与基本的基本类型 `Boolean` 基本一致，差别不大。
 2. 相当于 `Boolean` 转换没什么太大区别。
-3. 实例化
+3. `Boolean` 实例化。
 
 ```JavaScript
 var falseObject = new Boolean(false);
