--- a/src/notes/javascript/10.md
+++ b/src/notes/javascript/10.md
@@ -29,16 +29,16 @@ function sayHi() {
 
 :::snippet 函数表达式
 
-1. 变量赋值语句，创建一个函数并将它赋值给变量 `functionName`。
+1. 变量赋值语句，创建一个函数并将它赋值给变量。
 
 ```javascript
-var functionName = function(arg0, arg1, arg2) {
+var func = function(arg0, arg1, arg2) {
   //函数体
 };
 ```
 
-> 通过变量创建的函数叫做匿名函数(anonymous function)，因为 function 关键字后面没有标识符
-> 匿名函数有时候也叫拉姆达函数,匿名函数的 name 属性是空字符串
+> 通过变量创建的函数叫做匿名函数（anonymous function），因为 `function` 关键字后面没有标识符
+> 匿名函数有时候也叫拉姆达函数,匿名函数的 name 属性是空字符串。
 
 2. 函数表达式与其他表达式一样，在使用前必须先赋值。
 
@@ -291,7 +291,7 @@ var object = {
 alert(object.getNameFunc()()); //"My Object"
 ```
 
-> this 和 arguments 也存在同样的问题。如果想访问作用域中的 arguments 对 象，必须将对该对象的引用保存到另一个闭包能够访问的变量中。
+> `this` 和 `arguments` 也存在同样的问题。如果想访问作用域中的 `arguments` 对 象，必须将对该对象的引用保存到另一个闭包能够访问的变量中。
 
 3. 赋值设置会改变闭包中匿名函数的 `this`。
 
@@ -548,7 +548,7 @@ var application = (function() {
 :::snippet 函数表达式特点
 
 1. 函数表达式不同于函数声明。函数声明要求有名字，但函数表达式不需要。没有名字的函数表 达式也叫做匿名函数。
-2. 在无法确定如何引用函数的情况下，递归函数就会变得比较复杂;
+2. 在无法确定如何引用函数的情况下，递归函数就会变得比较复杂。
 3. 递归函数应该始终使用 arguments.callee 来递归地调用自身，不要使用函数名——函数名可能会发生变化。
 
 :::
@@ -557,7 +557,7 @@ var application = (function() {
 
 1. 在后台执行环境中，闭包的作用域链包含着它自己的作用域、包含函数的作用域和全局作用域。
 2. 函数的作用域及其所有变量都会在函数执行结束后被销毁，当函数返回了一个闭包时，这个函数的作用域将会一直在内存中保存到闭包不存在为止。
-3. 使用闭包可以在 JavaScript 中模仿块级作用域(JavaScript 本身没有块级作用域的概念)
+3. 使用闭包可以在 JavaScript 中模仿块级作用域(JavaScript 本身没有块级作用域的概念)。
 
 :::
 
