--- a/src/notes/javascript/06.md
+++ b/src/notes/javascript/06.md
@@ -59,7 +59,7 @@ alert(date1 > date2); //false
 var expression = / pattern / flags ;
 ```
 
-2. 不同方式定义表达式
+2. 不同方式定义表达式。
 
 ```JavaScript
 var pattern1 = /[bc]at/i; //匹配第一个"bat"或"cat"，不区分大小写
