--- a/src/notes/javascript/12.md
+++ b/src/notes/javascript/12.md
@@ -1,6 +1,6 @@
 :::snippet 能力检测
 
-1. 能力检测的目标不是识别特定的浏览器，而是识别浏览器的能力
+1. 能力检测的目标不是识别特定的浏览器，而是识别浏览器的能力。
 
 ```javascript
 if (object.propertyInQuestion) {
@@ -23,7 +23,7 @@ function getElement(id) {
 }
 ```
 
-3. 一个特性存在，不一定意味着另一个特性也存在
+3. 一个特性存在，不一定意味着另一个特性也存在。
 
 ```javascript
 function getWindowWidth() {
@@ -41,7 +41,7 @@ function getWindowWidth() {
 
 :::snippet 更可靠的能力检测
 
-1. 使用`typeof`进行检测
+1. 使用 `typeof` 进行检测。
 
 ```javascript
 //不要这样做！这不是能力检测——只检测了是否存在相应的方法
@@ -72,14 +72,16 @@ if (xhr.open) {
 ```javascript
 function isHostMethod(object, property) {
   var t = typeof object[property];
-  return t == "function" || !!(t == "object" && object[property]) || t == "unknown";
+  return (
+    t == "function" || !!(t == "object" && object[property]) || t == "unknown"
+  );
 }
 
 result = isHostMethod(xhr, "open"); //true
 result = isHostMethod(xhr, "foo"); //false
 ```
 
-4. 能力检测最好一次性检测而不是使用的时候分别检测
+4. 能力检测最好一次性检测而不是使用的时候分别检测。
 
 > DOM 对象是宿主对象，IE 及更早版本中的宿主对象是通过 COM 而非 JScript 实现的。
 > 因此，document.createElement()函数确实是一个 COM 对象，所以 typeof 才会返回"object"。
@@ -111,9 +113,9 @@ var hasEnumShadowsQuirk = (function() {
 :::snippet 用户代理检测
 
 1. HTTP 请求过程中，用户代理字符串是作为响应首部发送的，而且该字符串可以通过 JavaScript 的 navigator.userAgent 属性访问。
-2. 在服务器端，通过检测用户代理字符串来确定用户使用的浏览器是一种常用而且广为接受的做法
-3. 早期部分浏览器为了兼容其他网站服务后台的访问判断将代理属性伪造`Mozilla`等格式，导致代理判断不严格按照标准
-4. 完整的用户代理检测
+2. 在服务器端，通过检测用户代理字符串来确定用户使用的浏览器是一种常用而且广为接受的做法。
+3. 早期部分浏览器为了兼容其他网站服务后台的访问判断将代理属性伪造`Mozilla`等格式，导致代理判断不严格按照标准。
+4. 完整的用户代理检测。
 
 ```javascript
 var client = (function() {
