--- a/src/notes/javascript/15.md
+++ b/src/notes/javascript/15.md
@@ -99,7 +99,9 @@ while (child != element.lastElementChild) {
 //取得所有类中包含"username"和"current"的元素，类名的先后顺序无所谓
 var allCurrentUsernames = document.getElementsByClassName("username current");
 //取得ID 为"myDiv"的元素中带有类名"selected"的所有元素
-var selected = document.getElementById("myDiv").getElementsByClassName("selected");
+var selected = document
+  .getElementById("myDiv")
+  .getElementsByClassName("selected");
 ```
 
 2. classList 属性
@@ -149,7 +151,7 @@ doSomething(div.classList[i]);
 
 :::snippet 焦点管理
 
-1. document.activeElement 获取焦点的元素
+1. document.activeElement 获取焦点的元素。
 
 ```javascript
 var button = document.getElementById("myButton");
@@ -333,7 +335,9 @@ function contains(refNode, otherNode) {
 
 ```javascript
 function getInnerText(element) {
-  return typeof element.textContent == "string" ? element.textContent : element.innerText;
+  return typeof element.textContent == "string"
+    ? element.textContent
+    : element.innerText;
 }
 function setInnerText(element, text) {
   if (typeof element.textContent == "string") {
