--- a/src/notes/javascript/10.md
+++ b/src/notes/javascript/10.md
@@ -38,7 +38,7 @@ var func = function(arg0, arg1, arg2) {
 ```
 
 > 通过变量创建的函数叫做匿名函数（anonymous function），因为 `function` 关键字后面没有标识符
-> 匿名函数有时候也叫拉姆达函数,匿名函数的 name 属性是空字符串。
+> 匿名函数有时候也叫拉姆达函数,匿名函数的 `name` 属性是空字符串。
 
 2. 函数表达式与其他表达式一样，在使用前必须先赋值。
 
@@ -126,7 +126,7 @@ factorial = null;
 alert(anotherFactorial(4)); //出错!
 ```
 
-3. 非标准模式递归调用使用`arguments.callee`设置函数调用本身。
+3. 非标准模式递归调用使用 `arguments.callee` 设置函数调用本身。
 
 ```javascript
 function factorial(num) {
