--- a/src/notes/javascript/12.md
+++ b/src/notes/javascript/12.md
@@ -56,7 +56,7 @@ function isSortable(object) {
 }
 ```
 
-2. IE9 以前版本 IE 浏览器 的`ActiveXObject`实例化返回对象的方法由于 COM 对象实现所以 `typeof` 不返回标准的`function`
+2. IE9 以前版本 IE 浏览器 的`ActiveXObject`实例化返回对象的方法由于 COM 对象实现所以 `typeof` 不返回标准的`function`。
 
 ```javascript
 //在低版本IE 中会导致错误
@@ -67,7 +67,7 @@ if (xhr.open) {
 }
 ```
 
-3. IE 的 COM 对象方法检测
+3. IE 的 COM 对象方法检测。
 
 ```javascript
 function isHostMethod(object, property) {
