--- a/src/notes/javascript/13.md
+++ b/src/notes/javascript/13.md
@@ -1,15 +1,15 @@
 :::snippet DOM 文档对象模型
 
-1. DOM（文档对象模型）是针对 HTML 和 XML 文档的一个 API（应用程序编程接口）
-2. DOM 可以将任何 HTML 或 XML 文档描绘成一个由多层节点构成的结构
-3. 整个页面的 DOM 元素构成一个树结构
+1. DOM（文档对象模型）是针对 HTML 和 XML 文档的一个 API（应用程序编程接口）。
+2. DOM 可以将任何 HTML 或 XML 文档描绘成一个由多层节点构成的结构。
+3. 整个页面的 DOM 元素构成一个树结构。
 
 :::
 
 :::snippet Node 类型
 
-1. DOM1 级定义了一个 Node 接口，该接口将由 DOM 中的所有节点类型实现
-2. 每个节点的 `nodeType` 都有其对应的类型
+1. DOM1 级定义了一个 Node 接口，该接口将由 DOM 中的所有节点类型实现。
+2. 每个节点的 `nodeType` 都有其对应的类型。
 
 | Node 类型                        | 值  |
 | :------------------------------- | :-- |
@@ -26,7 +26,7 @@
 | Node.DOCUMENT_FRAGMENT_NODE      | 11  |
 | Node.NOTATION_NODE               | 12  |
 
-3. IE 没有公开 Node 类型的构造函数，所以判断类型统一用值判断
+3. IE 没有公开 Node 类型的构造函数，所以判断类型统一用值判断。
 
 ```javascript
 if (someNode.nodeType == Node.ELEMENT_NODE) {
@@ -40,7 +40,7 @@ if (someNode.nodeType == 1) {
 }
 ```
 
-4. `nodeName` 和 `nodeValue` 属性
+4. `nodeName` 和 `nodeValue` 属性。
 
 ```javascript
 if (someNode.nodeType == 1) {
@@ -52,7 +52,7 @@ if (someNode.nodeType == 1) {
 
 :::snippet Node 节点关系
 
-1. `childNodes` 子节点属性
+1. `childNodes` 子节点属性。
 
 ```javascript
 var firstChild = someNode.childNodes[0];
@@ -60,7 +60,7 @@ var secondChild = someNode.childNodes.item(1);
 var count = someNode.childNodes.length;
 ```
 
-2. `childNodes` 保存着 `NodeList` 但是并非是一个 `Array` 的实例
+2. `childNodes` 保存着 `NodeList` 但是并非是一个 `Array` 的实例。
 
 ```javascript
 //在IE8 及之前版本中无效
@@ -80,8 +80,8 @@ function convertToArray(nodes) {
 }
 ```
 
-3. `parentNode` 父节点，`childNodes`包含节点都对应这个同一个父节点的引用
-4. `previousSibling` 上一个节点、`previousSibling` 下一个节点
+3. `parentNode` 父节点，`childNodes` 包含节点都对应这个同一个父节点的引用。
+4. `previousSibling` 上一个节点、`previousSibling` 下一个节点。
 
 ```javascript
 if (someNode.nextSibling === null) {
@@ -91,7 +91,7 @@ if (someNode.nextSibling === null) {
 }
 ```
 
-5. `firstChild` 第一个节点 、 `lastChild` 最后一个节点
+5. `firstChild` 第一个节点 、 `lastChild` 最后一个节点。
 
 :::
 
@@ -171,7 +171,7 @@ alert(shallowList.childNodes.length); //0
 :::snippet Document 类型
 
 在浏览器中，document 对象是 HTMLDocument（继承自 Document 类型）的一个实例，表示整个 HTML 页面。
-而且，document 对象是 window 对象的一个属性，因此可以将其作为全局对象来访问
+而且，document 对象是 window 对象的一个属性，因此可以将其作为全局对象来访问。
 
 | Document 属性 | 值                                                                                         |
 | :------------ | :----------------------------------------------------------------------------------------- |
@@ -189,7 +189,7 @@ alert(shallowList.childNodes.length); //0
 
 :::snippet Document 子节点
 
-1. Document 子节点
+1. `Document` 子节点。
 
 ```html
 <!DOCTYPE >
@@ -206,8 +206,8 @@ var body = document.body; //取得对<body>的引用
 var doctype = document.doctype; //取得对<!DOCTYPE>的引用
 ```
 
-2. 浏览器对 `document.doctype` 的支持差别很大，一般不使用该属性进行操作
-3. 最外层注释不同的浏览器解析规则也不尽相同，不过基本没有用处
+2. 浏览器对 `document.doctype` 的支持差别很大，一般不使用该属性进行操作。
+3. 最外层注释不同的浏览器解析规则也不尽相同，不过基本没有用处。
 
 ```html
 <!--第一条注释 -->
@@ -220,7 +220,7 @@ var doctype = document.doctype; //取得对<!DOCTYPE>的引用
 :::
 :::snippet Document 信息
 
-1. 文档标题
+1. 文档标题。
 
 ```javascript
 //取得文档标题
@@ -229,7 +229,7 @@ var originalTitle = document.title;
 document.title = "New page title";
 ```
 
-2. 文档的 URL
+2. 文档的 URL。
 
 ```javascript
 //取得完整的URL
@@ -240,7 +240,7 @@ var domain = document.domain;
 var referrer = document.referrer;
 ```
 
-3. `document.domain` 赋值可以使得子域名页面与主域名相互通信，不受跨域限制
+3. `document.domain` 赋值可以使得子域名页面与主域名相互通信，不受跨域限制。
 
 ```javascript
 //假设页面来自于p2p.wrox.com 域
@@ -307,15 +307,15 @@ var radios = document.getElementsByName("color");
 
 1. `document.anchors`：包含文档中所有带`name` 特性的`<a>`元素；
 2. `document.applets`：包含文档中所有的`<applet>`元素，因为不再推荐使用`<applet>`元素，所以这个集合已经不建议使用了；
-3. `document.forms`：包含文档中所有的`<form>`元素，与 document.getElementsByTagName("form")得到的结果相同；
-4. `document.images`：包含文档中所有的`<img>`元素，与 document.getElementsByTagName("img")得到的结果相同；
-5. `document.links`：包含文档中所有带 href 特性的`<a>`元素。
+3. `document.forms`：包含文档中所有的`<form>`元素，与 `document.getElementsByTagName("form")` 得到的结果相同；
+4. `document.images`：包含文档中所有的`<img>`元素，与 `document.getElementsByTagName("img")` 得到的结果相同；
+5. `document.links`：包含文档中所有带 `href` 特性的`<a>`元素；
 
 :::
 
 :::snippet Document 写入
 
-通过 `write()` 和 `writeln()` 写入内容会被解析为 `html` 标签
+通过 `write()` 和 `writeln()` 写入内容会被解析为 `html` 标签。
 
 ```html
 <html>
@@ -337,7 +337,7 @@ var radios = document.getElementsByName("color");
 
 :::snippet Element 类型
 
-1. Element 类型用于表现 XML 或 HTML 元素，提供了对元素标签名、子节点及特性的访问
+1. `Element` 类型用于表现 `XML` 或 `HTML` 元素，提供了对元素标签名、子节点及特性的访问。
 
 | Document 属性 | 值                                                                             |
 | :------------ | :----------------------------------------------------------------------------- |
@@ -347,7 +347,7 @@ var radios = document.getElementsByName("color");
 | parentNode    | 可能是 Document 或 Element                                                     |
 | childNodes    | Element、Text、Comment、ProcessingInstruction、CDATASection 或 EntityReference |
 
-2. 访问元素的标签名，可以使用 `nodeName` 属性，也可以使用 `tagName` 属性
+2. 访问元素的标签名，可以使用 `nodeName` 属性，也可以使用 `tagName` 属性.
 
 ```html
 <div id="myDiv"></div>
@@ -371,8 +371,8 @@ if (element.tagName.toLowerCase() == "div") {
 
 :::snippet Element 元素
 
-1. 所有 HTML 元素都由 HTMLElement 类型表示，不是直接通过这个类型，也是通过它的子类型来表示。
-2. HTMLElement 类型直接继承自 Element 并添加了一些属性
+1. 所有 `HTML` 元素都由 `HTMLElement` 类型表示，不是直接通过这个类型，也是通过它的子类型来表示。
+2. `HTMLElement` 类型直接继承自 `Element` 并添加了一些属性。
 
 | 属性      | 描述                                                                                                            |
 | :-------- | :-------------------------------------------------------------------------------------------------------------- |
@@ -382,7 +382,7 @@ if (element.tagName.toLowerCase() == "div") {
 | dir       | 语言的方向，值为"ltr"（left-to-right，从左至右）或"rtl"（right-to-left，从右至左），也很少使用                  |
 | className | 与元素的 class 特性对应，即为元素指定的 CSS 类。没有将这个属性命名为 class，是因为 class 是 ECMAScript 的保留字 |
 
-3. 获取 html 预定义的属性
+3. 获取 `html` 预定义的属性。
 
 ```html
 <div id="myDiv" class="bd" title="Body text" lang="en" dir="ltr"></div>
@@ -451,7 +451,7 @@ function outputAttributes(element) {
 
 :::snippet 创建元素
 
-1. 元素创建（不建议使用）
+1. 元素创建（不建议使用）。
 
 ```javascript
 // 直接创建和赋值可能会因为浏览器的一些差异影响部分功能
@@ -461,13 +461,14 @@ div.className = "box";
 document.body.appendChild(div);
 ```
 
-2. 元素创建属性赋值（推荐）
+2. 元素创建属性赋值（推荐）。
 
 ```javascript
 var div = document.createElement('<div id="myNewDiv" class="box"></div >');
 ```
 
 :::
+
 :::snippet Element 的子节点
 
 1. 不同浏览器对换行的解析不一致，如果是 IE 来解析这些代码，那么`<ul>`元素会有 3 个子节点，分别是 3 个`<li>`元素。
@@ -495,7 +496,7 @@ for (var i = 0, len = element.childNodes.length; i < len; i++) {
 
 :::snippet Text 类型
 
-1. 文本节点由 Text 类型表示，包含的是可以照字面解释的纯文本内容。纯文本中可以包含转义后的 HTML 字符，但不能包含 HTML 代码
+1. 文本节点由 `Text` 类型表示，包含的是可以照字面解释的纯文本内容。纯文本中可以包含转义后的 `HTML` 字符，但不能包含 `HTML` 代码。
 
 | 属性       | 描述                 |
 | :--------- | :------------------- |
@@ -505,7 +506,7 @@ for (var i = 0, len = element.childNodes.length; i < len; i++) {
 | parentNode | Element              |
 | childNodes | 不支持（没有）子节点 |
 
-2. 可以通过 nodeValue 属性或 data 属性访问 Text 节点中包含的文本，这两个属性中包含的值相同。对 nodeValue 的修改也会通过 data 反映出来，反之亦然。使用下列方法可以操作节点中的文本。
+2. 可以通过 `nodeValue` 属性或 `data` 属性访问 `Text` 节点中包含的文本，这两个属性中包含的值相同。对 `nodeValue` 的修改也会通过 `data` 反映出来，反之亦然。使用下列方法可以操作节点中的文本。
 
 | 方法                             | 描述                                                             |
 | :------------------------------- | :--------------------------------------------------------------- |
@@ -516,7 +517,7 @@ for (var i = 0, len = element.childNodes.length; i < len; i++) {
 | splitText(offset)                | 从 offset 指定的位置将当前文本节点分成两个文本节点               |
 | substringData(offset, count)     | 提取从 offset 指定的位置开始到 offset+count 为止                 |
 
-3. 文本节点
+3. 文本节点。
 
 ```html
 <!-- 没有内容，也就没有文本节点 -->
@@ -531,13 +532,13 @@ for (var i = 0, len = element.childNodes.length; i < len; i++) {
 
 :::snippet Text 创建节点
 
-1. 文本节点的 html 会被转码
+1. 文本节点的 `html` 会被转码。
 
 ```javascript
 var textNode = document.createTextNode("<strong>Hello</strong> world!");
 ```
 
-2. 规范化文本节点，`normalize()` 合并同级相邻文本节点
+2. 规范化文本节点，`normalize()` 合并同级相邻文本节点。
 
 ```javascript
 var element = document.createElement("div");
@@ -553,7 +554,7 @@ alert(element.childNodes.length); //1
 alert(element.firstChild.nodeValue); // "Hello world!Yippee!"
 ```
 
-3. 分割文本节点，`splitText()` 拆分文本节点
+3. 分割文本节点，`splitText()` 拆分文本节点。
 
 ```javascript
 var element = document.createElement("div");
@@ -571,7 +572,7 @@ alert(element.childNodes.length); //2
 
 :::snippet Comment 类型
 
-1. 注释在 DOM 中是通过 Comment 类型来表示的
+1. 注释在 DOM 中是通过 Comment 类型来表示的。
 
 | 属性       | 描述                 |
 | :--------- | :------------------- |
@@ -581,7 +582,7 @@ alert(element.childNodes.length); //2
 | parentNode | Document 或 Element  |
 | childNodes | 不支持（没有）子节点 |
 
-2. 获取注释内容
+2. 获取注释内容。
 
 ```html
 <div id="myDiv"><!--A comment --></div>
@@ -593,7 +594,7 @@ var comment = div.firstChild;
 alert(comment.data); //"A comment"
 ```
 
-3. 创建注释
+3. 创建注释。
 
 ```javascript
 var comment = document.createComment("A comment ");
@@ -603,8 +604,8 @@ var comment = document.createComment("A comment ");
 
 :::snippet CDATASection 类型
 
-1. CDATASection 类型只针对基于 XML 的文档，表示的是 CDATA 区域。与 Comment 类似，
-   CDATASection 类型继承自 Text 类型，因此拥有除 splitText()之外的所有字符串操作方法
+1. `CDATASection` 类型只针对基于 `XML` 的文档，表示的是 `CDATA` 区域与 `Comment` 类似，
+   `CDATASection` 类型继承自 `Text` 类型，因此拥有除 `splitText()` 之外的所有字符串操作方法。
 
 | 属性       | 描述                 |
 | :--------- | :------------------- |
@@ -614,7 +615,7 @@ var comment = document.createComment("A comment ");
 | parentNode | Document 或 Element  |
 | childNodes | 不支持（没有）子节点 |
 
-2. CDATA 区域只会出现在 XML 文档中，因此多数浏览器都会把 CDATA 区域错误地解析为 Comment 或 Element
+2. `CDATA` 区域只会出现在 `XML` 文档中，因此多数浏览器都会把 `CDATA` 区域错误地解析为 `Comment` 或 `Element`。
 
 ```html
 <div id="myDiv"><![CDATA[This is some content.]]></div>
@@ -624,7 +625,7 @@ var comment = document.createComment("A comment ");
 
 :::snippet DocumentType 类型
 
-1. DocumentType 类型在 Web 浏览器中并不常用，仅有 Firefox、Safari 和 Opera 支持它
+1. `DocumentType` 类型在 Web 浏览器中并不常用，仅有 Firefox、Safari 和 Opera 支持它。
 
 | 属性       | 描述                 |
 | :--------- | :------------------- |
@@ -634,7 +635,7 @@ var comment = document.createComment("A comment ");
 | parentNode | Document             |
 | childNodes | 不支持（没有）子节点 |
 
-2. DocumentType 的 name 属性中保存的就是 HTML
+2. `DocumentType` 的 `name` 属性中保存的就是 `HTML`。
 
 ```html
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
