--- a/src/notes/javascript/14.md
+++ b/src/notes/javascript/14.md
@@ -1,6 +1,6 @@
 :::snippet 动态脚本
 
-1. 动态加载 script 标签
+1. 动态加载 `script` 标签。
 
 ```javascript
 var script = document.createElement("script");
@@ -9,7 +9,7 @@ script.src = "client.js";
 document.body.appendChild(script);
 ```
 
-2. 动态加载 script 代码
+2. 动态加载 `script` 代码。
 
 ```javascript
 var script = document.createElement("script");
@@ -27,7 +27,7 @@ document.body.appendChild(script);
 
 :::snippet 动态样式
 
-1. 动态加载 link 标签
+1. 动态加载 `link` 标签。
 
 ```javascript
 var link = document.createElement("link");
@@ -38,7 +38,7 @@ var head = document.getElementsByTagName("head")[0];
 head.appendChild(link);
 ```
 
-2.  动态加载 link 代码
+2. 动态加载 `link` 代码。
 
 ```javascript
 var style = document.createElement("style");
@@ -60,7 +60,7 @@ head.appendChild(style);
 
 :::snippet 表格操作
 
-1. 表格标签创建
+1. 表格标签创建。
 
 ```html
 <table border="1" width="100%">
@@ -77,7 +77,7 @@ head.appendChild(style);
 </table>
 ```
 
-2. dom 创建表格
+2. `dom` 创建表格。
 
 ```javascript
 //创建table
@@ -113,7 +113,7 @@ document.body.appendChild(table);
 
 :::snippet 表格快捷操作
 
-1. `<table>`属性和方法
+1. `<table>`属性和方法。
 
 | 属性方法        | 描述                                          |
 | :-------------- | :-------------------------------------------- |
@@ -131,7 +131,7 @@ document.body.appendChild(table);
 | deleteRow(pos)  | 删除指定位置的行                              |
 | insertRow(pos)  | 向 `rows` 集合中的指定位置插入一行            |
 
-2. `<tbody>`属性和方法
+2. `<tbody>`属性和方法。
 
 | 属性方法       | 描述                                                   |
 | :------------- | :----------------------------------------------------- |
@@ -139,15 +139,15 @@ document.body.appendChild(table);
 | deleteRow(pos) | 删除指定位置的行                                       |
 | insertRow(pos) | 向 rows 集合中的指定位置插入一行，返回对新插入行的引用 |
 
-3. `<tr>`属性和方法
+3. `<tr>`属性和方法。
 
 | 属性方法        | 描述                                                              |
 | :-------------- | :---------------------------------------------------------------- |
-| cells           | 保存着<tr>元素中单元格的 HTMLCollection                           |
+| cells           | 保存着`<tr>`元素中单元格的 HTMLCollection                         |
 | deleteCell(pos) | 删除指定位置的单元格                                              |
 | insertCell(pos) | 向 cells 集合中的指定位置插入一个单元格，返回对新插入单元格的引用 |
 
-4. 表格创建
+4. 表格创建。
 
 ```javascript
 //创建table
@@ -177,7 +177,7 @@ document.body.appendChild(table);
 
 :::snippet NodeList
 
-1. NodeList 对象都是在访问 DOM 文档时实时运行的查询
+1. `NodeList` 对象都是在访问 `DOM` 文档时实时运行的查询。
 
 ```javascript
 var divs = document.getElementsByTagName("div"),
@@ -190,7 +190,7 @@ for (i = 0; i < divs.length; i++) {
 }
 ```
 
-2. 迭代 NodeList 设置 length 初始化变量
+2. 迭代 `NodeList` 设置 `length` 初始化变量。
 
 ```javascript
 var divs = document.getElementsByTagName("div"),
@@ -203,8 +203,8 @@ for (i = 0, len = divs.length; i < len; i++) {
 }
 ```
 
-> 一般来说，应该尽量减少访问 NodeList 的次数。
-> 因为每次访问 NodeList，都会运行一次基于文档的查询。
-> 所以，可以考虑将从 NodeList 中取得的值缓存起来。
+> 一般来说，应该尽量减少访问 `NodeList` 的次数。
+> 因为每次访问 `NodeList`，都会运行一次基于文档的查询。
+> 所以，可以考虑将从 `NodeList` 中取得的值缓存起来。
 
 :::
