--- a/src/notes/javascript/15.md
+++ b/src/notes/javascript/15.md
@@ -1,6 +1,6 @@
 :::snippet 选择符 API
 
-1. querySelector() 方法
+1. `querySelector()` 方法
 
 ```javascript
 //取得body 元素
@@ -13,7 +13,7 @@ var selected = document.querySelector(".selected");
 var img = document.body.querySelector("img.button");
 ```
 
-2. querySelectorAll() 方法
+2. `querySelectorAll()` 方法
 
 ```javascript
 //取得某<div>中的所有<em>元素（类似于getElementsByTagName("em")）
@@ -30,7 +30,7 @@ for (i = 0, len = strongs.length; i < len; i++) {
 }
 ```
 
-3. matchesSelector()方法
+3. `matchesSelector()` 方法
 
 ```javascript
 function matchesSelector(element, selector) {
@@ -53,18 +53,18 @@ if (matchesSelector(document.body, "body.page1")) {
 }
 ```
 
-> 选择符 API 参数都是 CSS 选择符，CSS 选择符可以简单也可以复杂，视情况而定 。
+> 选择符 API 参数都是 CSS 选择符，CSS 选择符可以简单也可以复杂，视情况而定。
 > 如果传入了不被支持的选择符，会抛出错误。
 
 :::
 
 :::snippet 元素遍历
 
-1. childElementCount：返回子元素（不包括文本节点和注释）的个数。
-2. firstElementChild：指向第一个子元素；firstChild 的元素版。
-3. lastElementChild：指向最后一个子元素；lastChild 的元素版。
-4. previousElementSibling：指向前一个同辈元素；previousSibling 的元素版。
-5. nextElementSibling：指向后一个同辈元素；nextSibling 的元素版。
+1. `childElementCount`：返回子元素（不包括文本节点和注释）的个数。
+2. `firstElementChild`：指向第一个子元素；`firstChild` 的元素版。
+3. `lastElementChild`：指向最后一个子元素；`lastChild` 的元素版。
+4. `previousElementSibling`：指向前一个同辈元素；`previousSibling` 的元素版。
+5. `nextElementSibling`：指向后一个同辈元素；`nextSibling` 的元素版。
 
 ```javascript
 var i,
@@ -93,7 +93,7 @@ while (child != element.lastElementChild) {
 
 :::snippet 类相关扩充
 
-1. getElementsByClassName() 方法
+1. `getElementsByClassName()` 方法
 
 ```javascript
 //取得所有类中包含"username"和"current"的元素，类名的先后顺序无所谓
@@ -104,7 +104,7 @@ var selected = document
   .getElementsByClassName("selected");
 ```
 
-2. classList 属性
+2. `classList` 属性
 
 ```html
 <div class="bd user disabled">...</div>
@@ -151,7 +151,7 @@ doSomething(div.classList[i]);
 
 :::snippet 焦点管理
 
-1. document.activeElement 获取焦点的元素。
+1. `document.activeElement` 获取焦点的元素。
 
 ```javascript
 var button = document.getElementById("myButton");
@@ -159,7 +159,7 @@ button.focus();
 alert(document.activeElement === button); //true
 ```
 
-2. document.hasFocus() 是否获取焦点
+2. `document.hasFocus()` 是否获取焦点
 
 ```javascript
 var button = document.getElementById("myButton");
@@ -167,16 +167,16 @@ button.focus();
 alert(document.hasFocus()); //true
 ```
 
-> 文档刚刚加载完成时，document.activeElement 中保存的是 document.body 元素的引用。
-> 文档加载期间，document.activeElement 的值为 null。
+> 文档刚刚加载完成时，`document.activeElement` 中保存的是 `document.body` 元素的引用。
+> 文档加载期间，`document.activeElement` 的值为 `null`。
 
 :::
 
 :::snippet HTMLDocument 的变化
 
-1. readyState 属性:loading，正在加载文档；complete，已经加载完文档。
-2. 兼容模式:document.compatMode 获取浏览器的渲染模式，标准模式还是混杂模式等
-3. head 属性：document.head 获取`<head>`标签引用
+1. `readyState` 属性: `loading` ，正在加载文档；`complete` ，已经加载完文档。
+2. 兼容模式: `document.compatMode` 获取浏览器的渲染模式，标准模式还是混杂模式等
+3. `head` 属性：`document.head` 获取 `<head>` 标签引用
 
 ```javascript
 var head = document.head || document.getElementsByTagName("head")[0];
@@ -186,7 +186,7 @@ var head = document.head || document.getElementsByTagName("head")[0];
 
 :::snippet 字符集属性
 
-通过`<meta>`元素、响应头部或直接设置 charset 属性修改这个值
+通过 `<meta>` 元素、响应头部或直接设置 `charset` 属性修改这个值
 
 ```javascript
 alert(document.charset); //"UTF-16"
@@ -197,8 +197,8 @@ document.charset = "UTF-8";
 
 :::snippet 自定义数据属性
 
-HTML5 规定可以为元素添加非标准的属性，但要添加前缀 data-，目的是为元素提供与渲染无关的信息，
-或者提供语义信息。这些属性可以任意添加、随便命名，只要以 data-开头即可
+HTML5 规定可以为元素添加非标准的属性，但要添加前缀 `data-` ，目的是为元素提供与渲染无关的信息，
+或者提供语义信息。这些属性可以任意添加、随便命名，只要以 `data-` 开头即可
 
 ```html
 <div id="myDiv" data-appId="12345" data-myname="Nicholas"></div>
@@ -222,7 +222,7 @@ if (div.dataset.myname) {
 
 :::snippet 插入标记
 
-1. innerHTML 属性
+1. `innerHTML` 属性
 
 ```javascript
 div.innerHTML = 'Hello & welcome, <b>"reader"!</b>';
@@ -230,7 +230,7 @@ div.innerHTML = 'Hello & welcome, <b>"reader"!</b>';
 div.innerHTML = "<script defer>alert('hi');</script>";
 ```
 
-2. outerHTML 属性
+2. `outerHTML` 属性
 
 ```javascript
 div.outerHTML = "<p>This is a paragraph.</p>";
@@ -240,7 +240,7 @@ p.appendChild(document.createTextNode("This is a paragraph."));
 div.parentNode.replaceChild(p, div);
 ```
 
-3.  insertAdjacentHTML() 方法
+3. `insertAdjacentHTML()` 方法
 
 ```javascript
 //作为前一个同辈元素插入
@@ -253,7 +253,7 @@ element.insertAdjacentHTML("beforeend", "<p>Hello world!</p>");
 element.insertAdjacentHTML("afterend", "<p>Hello world!</p>");
 ```
 
-4. 内存与性能问题
+4. 内存与性能问题。
 
 ```javascript
 for (var i = 0, len = values.length; i < len; i++) {
@@ -281,7 +281,7 @@ element.scrollIntoView(alignToTop); // Boolean型参数，true滚动到顶部，
 element.scrollIntoView(scrollIntoViewOptions); // Object型参数
 ```
 
-2. Object 参数，behavior 这个选项决定页面是如何滚动的，实测 auto 与 instant 都是瞬间跳到相应的位置，而 smooth 就是有动画的过程
+2. `Object` 参数，`behavior` 这个选项决定页面是如何滚动的，实测 `auto` 与 `instant` 都是瞬间跳到相应的位置，而 `smooth` 就是有动画的过程
 
 ```javascript
 {
@@ -294,15 +294,15 @@ element.scrollIntoView(scrollIntoViewOptions); // Object型参数
 
 :::snippet 专有扩展
 
-1. 文档模式：强制浏览器以某种模式渲染页面，可以使用 HTTP 头部信息 X-UA-Compatible，或通过等价的`<meta>`标签来设置
+1. 文档模式：强制浏览器以某种模式渲染页面，可以使用 `HTTP` 头部信息 `X-UA-Compatible` ，或通过等价的 `<meta>` 标签来设置。
 
 ```html
 <meta http-equiv="X-UA-Compatible" content="IE=IEVersion" />
 ```
 
-2. children 属性：等价于 childNodes 属性
+2. `children` 属性：等价于 `childNodes` 属性。
 
-3. contains()方法：检测是否子级包含某个元素
+3. `contains()` 方法：检测是否子级包含某个元素。
 
 ```javascript
 function contains(refNode, otherNode) {
@@ -331,7 +331,7 @@ function contains(refNode, otherNode) {
 
 :::snippet 插入文本
 
-1. 插入文本：innerText 属性、textContent 属性
+1. 插入文本：`innerText` 属性、`textContent` 属性
 
 ```javascript
 function getInnerText(element) {
@@ -348,11 +348,11 @@ function setInnerText(element, text) {
 }
 ```
 
-> 实际上，innerText 与 textContent 返回的内容并不完全一样。
-> 比如，innerText 会忽略行内的样式和脚本，而 textContent 则会像返回其他文本一样返回行内的样式和脚本代码。
-> 避免跨浏览器兼容问题的最佳途径，就是从不包含行内样式或行内脚本的 DOM 子树副本或 DOM 片段中读取文本。
+> 实际上，`innerText` 与 `textContent` 返回的内容并不完全一样。
+> 比如，`innerText` 会忽略行内的样式和脚本，而 `textContent` 则会像返回其他文本一样返回行内的样式和脚本代码。
+> 避免跨浏览器兼容问题的最佳途径，就是从不包含行内样式或行内脚本的 `DOM` 子树副本或 `DOM` 片段中读取文本。
 
-2. outerText 属性
+2. `outerText` 属性
 
 ```javascript
 div.outerText = "Hello world!";
@@ -361,22 +361,22 @@ var text = document.createTextNode("Hello world!");
 div.parentNode.replaceChild(text, div);
 ```
 
-> 支持 outerText 属性的浏览器有 IE4+、Safari 3+、Opera 8+和 Chrome。
+> 支持 `outerText` 属性的浏览器有 IE4+、Safari 3+、Opera 8+和 Chrome。
 > 由于这个属性会导致调用它的元素不存在，因此并不常用。建议尽可能不要使用这个属性。
 
 :::
 
 :::snippet 滚动
 
-1. scrollIntoViewIfNeeded(alignCenter)：只在当前元素在视口中不可见的情况下，才滚动浏览器窗口或容器元素，最终让它可见。
+1. `scrollIntoViewIfNeeded(alignCenter)` ：只在当前元素在视口中不可见的情况下，才滚动浏览器窗口或容器元素，最终让它可见。
    如果当前元素在视口中可见，这个方法什么也不做。
-   如果将可选的 alignCenter 参数设置为 true，则表示尽量将元素显示在视口中部（垂直方向）。
+   如果将可选的 `alignCenter` 参数设置为 `true` ，则表示尽量将元素显示在视口中部（垂直方向）。
    Safari 和 Chrome 实现了这个方法。
-2. scrollByLines(lineCount)：将元素的内容滚动指定的行高，lineCount 值可以是正值，也可以是负值。
+2. `scrollByLines(lineCount)` ：将元素的内容滚动指定的行高，`lineCount` 值可以是正值，也可以是负值。
    Safari 和 Chrome 实现了这个方法。
-3. scrollByPages(pageCount)：将元素的内容滚动指定的页面高度，具体高度由元素的高度决定。
+3. `scrollByPages(pageCount)` ：将元素的内容滚动指定的页面高度，具体高度由元素的高度决定。
    Safari 和 Chrome 实现了这个方法。
 
-> scrollIntoView()是唯一一个所有浏览器都支持的方法，因此还是这个方法最常用
+> `scrollIntoView()` 是唯一一个所有浏览器都支持的方法，因此还是这个方法最常用
 
 :::
